--- a/mpps.35/kp-35.md
+++ b/mpps.35/kp-35.md
@@ -1,563 +1,379 @@
-^kp30.0
-^kp30.1
-問曰：前品^f35.1說已具^f35.2，今何以重說？
-答曰：^taisho25p314c前雖歎般若波羅蜜，事未具足，聞者無厭，是故復說。
-復次，初品但讚般若波羅蜜力，今讚行者能作是功德，四天王等歡喜奉鉢。
-復次，以菩薩能具諸願行，故佛安慰、勸進，言有此果報，終不虛也。
-復次，般若波羅蜜有二種果：一者、成佛度眾生；二者、雖未成佛，受世間果報──轉輪聖王、釋、梵天王主三千世界，世間福樂供養之事，悉皆備足。今以世間果報以示眾生，故說是事。
-復次，世間欲成大業，多有壞亂者；菩薩則不然，內心既定，外事亦應。
-如是等因緣，故說此品。
-^kp30.2
-^kp30.3
-問曰：菩薩增益六波羅蜜時，諸天、世人何因緣故喜？
-答曰：
-^kp30.4
-諸天皆因十善、四禪、四無量故生；是諸功德，皆由諸佛菩薩故有。
-^kp30.5
-若佛出世，增益諸天眾，減損阿修羅種；若佛不在世，阿修羅種多，諸天減少；以種雜福^f35.3不清淨故。
-^kp30.6
-若諸佛出世，能斷諸天疑網，能成大事。
-如釋提桓因命欲終時，心懷怖畏，求佛自救，遍不知處。雖見出家之人，山澤閑處，所供養者，皆亦不能斷其疑網。
-爾時毘首羯磨天^f35.4白釋提桓因言：「^kai[尸毘王^f35.5苦行奇特，世所希有！諸智人言：『是人不久當得作佛！』]」
-釋提桓因言：「^kai[是事難辦！何以知之？如魚子、菴羅樹華^f35.6、發心菩薩，是三事因時雖多，成果甚少。^f35.7今當試之！]」
-帝釋自化為鷹，毘首羯磨化作鴿，鴿投於王，王自割身肉，乃至舉身上稱^f35.8以代鴿命，地為震動。是時釋提桓因等心大歡喜，散眾天華，歎未曾有；如是決定大心，成佛不久！^f35.9
-^kp30.7
-復次，^taisho25p315a凡夫人肉眼，無有智慧，苦身求財，以自生活；聞菩薩增益六波羅蜜，成佛不久，猶尚歡喜，何況諸天！
-^kp30.8
-問曰：四天王天、三十三天有阿修羅難；上諸天等無有此患，何以歡喜？
-答曰：
-^kp30.9
-上諸天雖無阿修羅患，若佛不出世，生其天上者少；設有生者，五欲不妙。所以者何？但修不淨福故。色界諸天宮殿，光明、壽命，亦復如是。
-^kp30.10
-復次，諸天中有智慧者，能知禪味、五欲悉皆無常；唯佛出世，能令得常樂涅槃。以世間樂、涅槃樂皆由佛菩薩得，是故歡喜。
-譬如甘美果樹茂盛成就，人大歡喜，以樹有種種利益：有庇其蔭者，有用其華，食其果實。菩薩亦如是，能以離不善法蔭^b[遮三惡苦熱]，能^b[與人天富樂]之華，^b[令諸賢聖得三乘之果]，是故歡喜。
-^kp30.11
-^kp30.12
-問曰：諸天供養事多，何以奉鉢？
-答曰：四天王奉鉢，餘天供養。諸天供養，各有定法：
-如^b[佛初生時]，^b[釋提桓因]以天衣奉承佛身，^b[梵天王]躬自^f35.10執蓋，^b[四天王]四邊防護。
-^b[淨居諸天]欲令菩薩生厭離心故，化作老、病、死人及沙門身。
-又^b[出家時]，^b[四天王]勅使者捧舉馬足，^f35.11自四邊侍護菩薩。^b[天帝釋]取髮，於其天上城東門外立髮塔；又持菩薩寶衣，於城南門外立衣塔；^f35.12佛^b[至樹下時]，奉上好草。^b[執金剛菩薩]^f35.13常執金剛衛護菩薩；^b[梵天王]請佛轉法輪。
-如是等，各有常法。以是故，四天王奉鉢。
-「四鉢」義，如先說。^f35.14
-^kp30.13
-問曰：佛一身何以受四鉢？
-答曰：四王力等，不可偏受^f35.15。又令見佛神力，合四鉢為一，心喜信淨，作是念：「^kai[我等從菩薩初生^taisho25p315b至今成佛所修供養，功德不虛。]」
-^kp30.14
-問曰：四天王壽命五百歲，菩薩過無量阿僧祇劫然後成佛^f35.16；今之四天，非是後天，何以故喜？
-答曰：
-^kp30.15
-同一姓故；譬如貴姓胤^f35.17流百世，不以遠故為異。
-^kp30.16
-或時行者，見菩薩增益六波羅蜜時，心作是願：「^kai[是菩薩成佛時，我當奉鉢。]」是故得生。
-^kp30.17
-復次，四天王壽五百歲；人間五十歲，為四天王處一日一夜；亦三十日為一月，十二月為一歲；以此歲壽五百歲，為人間九百萬歲。菩薩能作是功德者，或近成佛，初生四天王，足可得值。
-^kp30.18
-問曰：如摩訶衍經中說：有佛以喜為食，不食揣食。^f35.18如天王佛衣服儀容，與白衣無異，^f35.19不須鉢食，^f35.20何以言「四天王定應奉鉢」？
-答曰：定者，為用鉢者故，不說不用。
-復次，用鉢諸佛多，不用鉢者少，是故以多為定。
-三千大千世界，四天王天乃至阿迦尼吒天^f35.21皆大歡喜，意念言：『我等當請是菩薩轉法輪』。
-^kp30.19
-^kp30.20
-釋曰：是諸天等，以華香瓔珞，禮拜恭敬，聽法讚歎等供養；亦作是念：「^kai[人修淨福，阿修羅種減，增益三十三天，我諸天亦得增益。]」
-^kp30.21
-問曰：上六種天已說，何以故更說「三千大千世界中，乃至阿迦尼吒天歡喜供養」？
-答曰：先說一須彌山上六天，此說三千大千世界諸天。
-先但說欲界，今此說欲界、色界諸天請佛轉法輪。^f35.22
-上雖說淨居諸天種種供養勸助，^f35.23今請轉法輪事大故。
-^kp30.22
-問^taisho25p315c曰：三藏中但說「梵天請轉法輪」，今何以說「四天王乃至阿迦尼吒天」？
-答曰：欲界天近故前來。
-色界都名為梵，若說梵王請佛，已說餘天。
-又梵為色界初門，說初故，後亦說。
-復次，眾生有佛無佛常識梵天，以梵天為世間祖父，為世人故說梵天。
-^kp30.23
-法輪相，如先說。^f35.24
-^kp30.24
-^kp30.25
-問曰：前已說「能作是功德」，^f35.25今何以復說「增益六波羅蜜」？
-答曰：
-^kp30.26
-先說總相，今說別相。
-^kp30.27
-復次，前所說功德中（前品中功德也）^f35.26種種無量，聞者厭惓^f35.27；今但略說「六波羅蜜」，則盡攝諸功德。
-^kp30.28
-復次，為天說故，「能作諸功德」；為人說故，「增益六波羅蜜」。何以知之？如後說「善男子、善女人」，以是故知。
-^kp30.29
-^kp30.30
-問曰：四天王天乃至阿迦尼吒天，何以不說「善天」，而但人中說「善男子、善女人」？
-答曰：諸天皆有天眼、天耳、他心智，知供養菩薩，故不別說其善。
-人以肉眼見^f35.28，無知；善者能知供養，以少故，別說善者。
-善者，從佛聞法，或從弟子、菩薩聞；或聞受記當作佛，又聞佛讚歎其名者，故知修善。
-^kp30.31
-問曰：何以但說男子、女人善，不說二根、無根者善？
-答曰：
-^kp30.32
-^kp30.33
-^kp30.34
-無根，所謂無得道相^f35.29，^f35.30是故不說。
-如毘尼中不得出家，^f35.31以其失男女相故。其心不定，以小因緣故便瞋；結使多故，著於世事；多懷疑網，不樂道法；雖能少修福事，智慧淺薄，不能深入；本性轉易，是^taisho25p316a故不說。聲聞法如是說。
-^kp30.35
-摩訶衍中，譬如大海，無所不容；是無根人或時修善，但以少故不說。所謂少者，於男女中，是人最少，是人修善者少；譬如白人，雖復鬚髮、黶子黑，不名黑人。
-^kp30.36
-二根人結使多雜，亦行男事、亦行女事，其心邪曲，難可勉濟^f35.32；譬如稠林曳木，曲者難出。
-又如阿修羅，其心不端故，常疑於佛，謂佛助天。佛為說五眾，謂有六眾，不為說一；若說四諦，謂有五諦，不說一事。
-二根人亦如是，心多邪曲故，不任得道。
-^kp30.37
-以是故，但說「男子」、「女人」中善者。
-^kp30.38
-善相者，有慈悲心，能忍惡罵。如《法句‧罵品》中說：「^kai[能忍惡罵人，是名人中上！]」^f35.33譬如好良馬，可中為王乘。
-復次，以五種邪語^f35.34及鞭杖、打害、縛繫等不能毀壞其心，是名為善相。
-復次，三業無失，樂於善人；不毀他善，不顯己德；隨順眾人，不說他過；不著世樂，不求名譽，信樂道德之樂；自業清淨，不惱眾生；心貴實法，輕賤世事；唯好直信，不隨他誑；為一切眾生得樂故，自捨己樂；令一切眾生得離苦故，以身代之。
-如是等無量名為善人相。^f35.35是相多在男、女，故說「善男子、善女人」。
-^kp30.39
-問曰：善男子、善女人何因能作是願？
-答曰：
-^kp30.40
-善男子、善女人自知福薄、智慧尠少，習近菩薩，欲求過度^f35.36；譬如沈石雖重，依船得度。
-^kp30.41
-又善男子、善女人聞菩薩不從一世、二世而得成道，無央數世往來生死，便作是念：「^kai[我當與為因緣。]」
-^kp30.42
-^kp30.43
-復次，菩薩積德厚故，在所生處，眾生皆來敬仰菩薩，以蒙利益^taisho25p316b重故。若見菩薩捨壽，則生是願：「^kai[我當與菩薩作父母、妻子、眷屬。]」所以者何？知習近善人，增益功德故；譬如積集眾香，香氣轉多。
-^kp30.44
-^kp30.45
-如菩薩先世為國王太子，見閻浮提人貧窮，欲求如意珠，入於大海，至龍王宮。
-龍見太子威德殊妙，即起迎逆^f35.38，延^f35.39前供養，而問之言：「^kai[何能遠來？]」
-太子答曰：「^kai[我憐閻浮提眾生故，欲求如意寶珠以饒益之！]」
-龍言：「^kai[能住我宮，受供一月，當以相與！]」
-太子即住一月，為龍王讚歎多聞，龍即與珠；是如意珠，能雨一由旬。
-龍言：「^kai[太子有相，不久作佛，我當作多聞第一弟子。]」
-時，太子復至一龍宮得珠，雨二由旬，二月讚歎神通力。
-龍言：「^kai[太子作佛不久，我當作神足第一弟子。]」
-復至一龍宮得珠，雨三由旬，三月讚歎智慧。
-龍言：「^kai[太子作佛不久，我當作智慧第一弟子。]」
-諸龍與珠已，言：「^kai[盡汝壽命，珠當還我。]」菩薩許之。
-太子得珠，至閻浮提；一珠能雨飲食，一珠能雨衣服，一珠能雨七寶，^f35.40利益眾生。
-^kp30.46
-又如須摩提菩薩，見燃燈佛，從須羅娑女買五莖花，不肯與之；即以五百金錢得五莖花，女猶不與，而要^f35.42之言：「^kai[願我世世常為君妻，當以相與！]」菩薩以供養佛故，即便許之。
-^kp30.47
-又妙光菩薩，長者女見其身有二十八相，生愛敬心，住在門下。菩薩既到，女即解頸琉璃珠，著菩薩鉢中，心作是願：「^kai[我當世世為此人婦！]」此女二百五十劫中，集諸功德；後生喜見婬女園蓮花中，喜見養育為女，至年十四，女工、世智，皆悉備足。爾時，有閻^taisho25p316c浮提王，名為財主，太子名德主，有大悲心，時出城入園遊觀，諸婬女等導引歌讚。德主太子散諸寶物、衣服、飲食；譬如龍雨，無不周遍。喜德女見太子，自造歌偈而讚太子，愛眼視之，目未曾眴^f35.43，而自發言：「^kai[世間之事，我悉知之，以我此身，奉給太子！]」
-太子問言：「^kai[汝為屬誰？若有所屬，此非我宜。]」
-爾時，喜見婬女答太子言：「^kai[我女生年日月時節，皆與太子同。此女非我腹生，我晨朝入園，見蓮花中有此女生，我因養育，畜以為女。無以我故而輕此女！此女六十四能^f35.44，無不悉備；女工技術、經書、醫方，皆悉了達；常懷慚愧，內心忠直，無有嫉妬，無邪婬想。我女德儀如是，太子必應納之！]」
-德主太子答語女言：「^kai[姊！我發阿耨多羅三藐三菩提心，修菩薩道，無所愛惜。國財妻子，象馬七珍^f35.45，有所求索，不逆人意；若汝生男女及以汝身，有人求者，當以施之，莫生憂悔！或時捨汝出家，為佛弟子，淨居山藪，汝亦勿愁！]」
-喜德女答言：「^kai[假令地獄火來，燒滅我身，終亦不悔！我亦不為婬欲戲樂故而以相好，我為勸助阿耨多羅三藐三菩提故奉事正士！]」
-女又白太子言：「^kai[我昨夜夢見妙日身佛^f35.46，坐道樹下，可^f35.47往觀之！]」
-太子見女端正，又聞佛出，以此二因緣故，共載一車，俱詣佛所。佛為說法，太子得無量陀羅尼門；女得調伏心志。^f35.48太子爾時，以五百寶花供養於佛，以求阿耨多羅三藐三菩提。
-太子白父王言：「^kai[我得見妙日身佛，大得善利。]」父王聞^taisho25p317a已，捨所愛重之物以與太子，與其官屬國內人民，俱詣佛所。佛為說法，王得一切法無闇燈陀羅尼。時王思惟：「^kai[不可以白衣法攝治國土、受於五欲而可得道！]」作是思惟已，立德主太子為王，出家求道。是時太子於月十五日六寶來應^f35.49，喜德妻變為寶女。
-如《不可思議經》^f35.50中廣說如是等因緣。
-^kp30.48
-故知善男子、善女人世世願為菩薩父母、妻子、眷屬。
-^kp30.49
-^kp30.50
-問曰：諸天何以作是願？
-答曰：世間中有^f35.52五欲第一，無不愛樂；於五欲中，觸為第一，能繫人心；如人墮在深泥，難可拯濟。以是故，諸天方便，令菩薩遠離婬欲。
-復次，若受餘欲，猶不失智慧；婬欲會時，身心慌迷，無所省覺，深著自沒！以是故，諸天令菩薩離之。
-^kp30.51
-問曰：云何令離？
-答曰：如釋迦文菩薩在淨飯王宮欲出城遊觀，淨居諸天化為老、病、死人，令其心厭；又令夜半見諸宮人妓直^f35.53惡露^f35.54不淨、涕唾流涎^f35.55、屎尿塗漫^f35.56；菩薩見已，即便穢厭。
-或時諸天令女人惡心妬忌，不識恩德，惡口欺誑，無所省察；菩薩見已，即生念言：「^kai[身雖似人，其心可惡！]」即便捨之。
-^kp30.52
-欲使菩薩從初發心，常作童真行，不與^taisho25p317b色欲共會。何以故？婬欲為諸結之本！
-佛言：「^kai[寧以利刀割截身體，不與女人共會！刀截雖苦，不墮惡趣；婬欲因緣，於無量劫數受地獄苦。]」人受五欲，尚不生梵世，何況阿耨多羅三藐三菩提！
-或有人言：「^kai[菩薩雖受五欲，心不著故，不妨於道。]」^f35.57以是故《經》言：「^kai[受五欲，尚不生梵世。梵世，無始眾生皆得生中；受五欲者尚所應得而不得之，何況阿耨多羅三藐三菩提本所不得而欲得之！]」以是故，菩薩應作童真，修行梵行，當得阿耨多羅三藐三菩提。
-梵行菩薩，不著世間故，速成菩薩道；若婬欲者，譬如膠漆，難可得離。所以者何？身受欲樂，婬欲根深！是故出家法中，婬戒在初，^f35.58又亦為重。
-^kp30.54
-佛告舍利弗：「（1）或有菩薩有父母、妻子、親族、知識；（2）或有菩薩，從初發意斷婬欲，修童真行，乃至得阿耨多羅三藐三菩提，不犯色欲；（3）或有菩薩方便力故，受五欲已，出家得阿耨多羅三藐三菩提。
-^kp30.53
-釋曰：是三種菩薩──
-^kp30.55
-初者、如世間人受五欲，後捨離出家，得菩提道。
-^kp30.56
-二者、大功德牢固，初發心時斷於婬欲，乃至成佛道。是菩薩──或法身，或肉身；或離欲，或未離欲。
-^kp30.57
-三者、清淨法身菩薩，得無生法忍，住六神通。為教化眾生故，與眾生同事而攝取之。^f35.60或作轉輪聖王，或作閻浮提王、長者、剎利，隨其所須而利益之。
-^kp30.58
-^kp30.59
-問曰：三種菩薩中，何以獨為一種菩薩作譬喻？
-答曰：一者、如人法，不斷婬欲。
-二者、常斷婬欲，修於淨行。
-三者、亦修淨行，現受婬欲；以人不了故，為作譬喻。
-^kp30.60
-問曰：何以不以夢、化等為喻？
-答曰：夢非五情^f35.61所知，但內心憶想故生；人以五情所見，變失無常，可以得解。
-化雖五情所知，而見者甚少。
-佛為度可度眾生，幻是眾人所信，是故為喻。
-^kp30.61
-如幻師以幻術故，於眾人中現希有事，令人歡喜；菩薩幻師亦如是，以五神通術故，於眾生中化作五欲，共相娛樂，化度眾生。^f35.62
-眾生有二種：在家、出家。為度出家眾生故，現作聲聞、辟支佛、佛^f35.63及諸出家外道師；在家眾生，或有見出家者得度，或有見在家同受五欲而可化度。^f35.64
-^kp30.62
-菩薩常以種種因緣，毀訾五欲。
-^kp30.63
-「^kai[欲為熾然]」者，若未失時，三毒火然；若其失時，無常火然^f35.65。二火然＊故，名為「熾然」，都無樂時。
-^kp30.64
-「^kai[欲為穢惡]」者，諸佛、菩薩、阿羅漢等諸離欲者，皆所穢賤^f35.66。譬如人見狗食糞，賤而愍之不得好食，而噉不淨；受欲之人，亦復如是，不得內心離欲之樂，而於色欲不淨求樂。
-^kp30.65
-「^kai[欲為毀壞]」者，著五欲因緣故，天王、人王、諸富貴^taisho25p318a者，亡國、危身，無不由之！
-^kp30.66
-「^kai[欲如怨]」者，失人善利；亦如刺客，外如親善，內心懷害；五欲如是，喪失善心，奪人慧命。五欲之生，正為破壞眾善、毀敗德業故出。又知五欲如鉤賊^f35.67魚、如摾^f35.68害鹿、如燈焚蛾，是故說「欲如怨」。怨家之害^f35.69，不過一世；著五欲因緣，墮三惡道，無量世受諸苦毒。
+壹、菩薩行般若波羅蜜，四天王歡喜奉鉢 ^kp35.1
 
-^kp30.67
-^kp30.68
-^kp30.69
-問曰：是事，舍利弗上已問，^f35.70今何以重問？
-答曰：先因佛說「^kai[欲以一切種知一切法，當學般若波羅蜜]」^f35.71故問，非自意問。
-復次，今^f35.72舍利弗聞上種種讚般若功德，心歡喜，尊重般若故，問「云何應行」；如病人聞歎良藥，便問云何應服。
-^kp30.70
-問曰：先已問「住不住法，行檀波羅蜜，施者、受者、財物不可得故^f35.73，如是^taisho25p318b等為行般若」，^f35.74今何以復問行？
-答曰：
-^kp30.71
-上總問諸波羅蜜，此但問般若。
-^kp30.72
-上廣讚歎般若為主，此直問行般若。
-^kp30.73
-復次，上雖廣歎般若波羅蜜，時會渴仰欲得；是故舍利弗為眾人故，問「行般若波羅蜜」。
-^kp30.74
-般若波羅蜜功德無量無盡，佛智慧亦無量無盡；若舍利弗不發問，則佛讚歎無窮已；若舍利弗不問者，則無因緣故，則不應止。
-^kp30.75
-問曰：般若功德尊重，若佛廣讚有何不可？
-答曰：讚歎般若，聞者歡喜尊重，則增其福德；若聞說般若，則增其智慧。不但以福德因緣故可成佛道，要須智慧得成；是故不須但讚歎。
-人聞讚歎，心已^f35.75清淨，渴仰欲得般若；如為渴人，廣讚歎美飲，不解於渴，即便應與之。
-^kp30.76
-如是等因緣故，舍利弗今問「行般若」。
-^kp30.77
-^kp30.78
-問曰：如人有眼見，方知所趣處，然後能行。菩薩亦如是，先念佛道，知般若，見已^f35.76，身然後應行；^f35.77今何以言「不見菩薩及般若」？若不見，云何得行？
-答曰：此中不言「常不見」，但明入般若觀時，不見菩薩及般若波羅蜜；^f35.78般若波羅蜜為令眾生知實法故出。^f35.79
-此菩薩名字，眾緣和合假稱。如後品中廣說。^f35.80般若波羅蜜名字亦如是，眾法和合故，假名為般若波羅蜜。
-般若波羅蜜雖是假名，而能破諸戲論；以自性無故，說言「不可見」。如火從眾緣和合，假名為火，雖無實事而能燒物。^f35.81
-^kp30.79
-問曰：若入般若中不見，出則便見，何者可信？
-答曰：上言「^kai[般若為實法故出]」，^f35.82是則可信；出般若波羅蜜，不實，故不可信。^f35.83
-^kp30.80
-問曰：若「入般若^taisho25p318c中不見，出則見」者，當知非法^f35.85常空，以般若力故空！
-答曰：世俗法故，言「行」、言^f35.86「入般若波羅蜜」；諸觀戲論滅故，無出、無入。^f35.87若諸賢聖不以名字說，則不得以教化凡夫；當取說意，莫著語言！^f35.88
-^kp30.81
-問曰：若般若中貴一切法空，此中何以先說眾生空破我？
-答曰：初聞般若，不得便說一切法空。
-^kp30.82
-^kp30.83
-我，不可以五情求得，但憶想分別生我想，無而謂有。又意情中無有定緣，但憶想分別、顛倒因緣故，於空五眾中而生我想。
-若聞「無我」，則易可解。
-^kp30.84
-色等諸法，現眼所見；若初言空無，則難可信。
-^kp30.85
-今先破我，次破我所法；破我、我所法故，則一切法盡空。如是離欲，名為得道。^f35.89
-^kp30.86
-復次，般若波羅蜜，無一定法故。
-^kp30.87
-^kp30.88
-「^kai[不見我行般若，不見不行]」^f35.90者，
-^kp30.89
-如凡夫不得般若，故名「不行」；菩薩則不然，但^b[行空般若]，故說「不見^b[不行]」。
-^kp30.90
-復次，佛為法王，觀餘菩薩^b[其智甚少]，雜諸結使，不名為^b[行]。譬如國王雖得少物，不名為得；佛亦如是教諸菩薩，雖有少行，不名為行。
-^kp30.91
-復次，^b[行]般若波羅蜜者生憍慢^f35.91，言「我有般若波羅蜜」，取是相；若^b[不行]者，心自懈沒而懷憂悴^f35.92。是故言「不見我行與不行」。
-^kp30.92
-復次，不見我^b[行]般若波羅蜜者，^b[破著有見]；不見我^b[不行]般若波羅蜜者，^b[破著無見]。
-^kp30.93
-復次，不見我^b[行]般若波羅蜜者，^b[止諸法戲調]；不見我^b[不行]者，^b[止懈怠心故]。譬如乘馬，疾則制之，遲則鞭之。
-如是等分別「行」、「不行」。
-^kp30.94
-復次，佛自說因緣，所謂「^kai[菩薩、菩薩字性空]」。
-是中雖但說「菩薩字空」，^taisho25p319a而五眾亦空。
-^kp30.95
-「^kai[空中無色，離色亦無空]」者，
-「^kai[空]」名法空，法空中乃無一毫法，何況麁色！
-「^kai[空亦不離色]」，所以者何？破色故有空，云何言離色！受、想、行、識亦如是。
-何以故？佛自更說因緣，所謂「^kai[但有名字謂為菩提，但有名字謂為菩薩，但有名字謂為空]」。
-^kp30.96
-問曰：先已說此事，^f35.94今何以重說？
-答曰：先說「^kai[不見菩薩，不見菩薩字，不見般若波羅蜜]」^f35.95；今說不見因緣，所謂「^kai[但有名謂為菩提，但有名謂為菩薩，但有名謂為空]」。
-上「菩薩」、此「菩薩」義同。
-「菩薩字」，即如「菩薩」中說。^f35.96
-「般若波羅蜜」分為二分：成就者名為「菩提」，未成就者名為「空」。^f35.97
-^kp30.97
-「生相」實不可得故，名為「無生」。所以者何？若先生後法，若先法後生，若生法一時，皆不可得，如先說。^f35.98
-無生故「無滅」。
-若法不生不滅如虛空，云何有垢有淨？^f35.99
-譬如虛空，萬歲雨亦不濕、大火燒不熱、烟亦不著。所以者何？本自無生故。
-^kp30.98
-菩薩能如是觀，不見離是不生不滅法有生有滅、有垢有淨。何以故？佛自說因緣：「^kai[一切法皆憶想分別，因緣和合故，強以名說。]」^f35.100不可說者是實義，可說者皆是名字。^f35.101
-^kp30.99
-「^kai[菩薩行般若波羅蜜，不見一切名字]」者，先略說名字，所謂菩薩、菩薩字、般若波羅蜜、菩提字；今廣說一切名字皆不可見，不見故不著──不著者，不可得故。如諸眼中，慧眼第一；菩薩以慧眼遍求不見，乃至不見細微一法，^f35.102是故不著。
-^kp30.100
-問曰：若菩薩一切法中不著，何得不入涅槃？
-答曰：是事處處已說，^f35.103今此中略說：（1）大悲心故，（2）十方佛念故，（3）本願未^taisho25p319b滿故，（4）精進波羅蜜力故，（5）般若波羅蜜、方便二事和合故，所謂不著於不著故^f35.104。如是等種種因緣故說「菩薩雖不著諸法，而不入涅槃」。
-^b[〈釋習相應品第三之一〉]^f35.105
-^b[^taisho25p319b5-^taisho25p322b27]
-^kp31.0
-^kp31.1
-問曰：第二品末已說空，^f35.106今何以重說？
-答曰：
-^kp31.2
-上多說法空，今雜說法空、眾生空。
-行者觀外法盡空無所有，而謂能知空者不空，是故復說「觀者亦空」。^f35.107
-是眾生空，聲聞法中多說，^f35.108一切佛弟子皆知諸法中無我。佛滅後五百歲分為二分：有信法空；有但信眾生空，言五眾是定有法，但受五眾者空。以是故佛說眾生空以況^f35.109法空。
-^kp31.3
-復次，我空易知，法空難見。所以者何？
-我以五情求之不可得，但以身見力故憶想分別為我。
-法空者，色可眼見、聲可耳聞，是故難知其空。^f35.110
-是二事般若波羅蜜中皆空，如「十八空」義中說。^f35.111
-^kp31.4
-^kp31.5
-問曰：如我乃至知者、見者，為是一事？為各各異？
-答曰：皆是一我，但以隨事為異。
-^kp31.6
-於五眾中，我、我所心起，故名為「我」。
-^kp31.7
-五眾和合^taisho25p319c中生^f35.112故，名為「眾生」。
-^kp31.8
-命根成就故，名為「壽者」、「命者」。
-^kp31.9
-能起眾事，如父生子，名為「生者」。
-^kp31.10
-乳哺、衣、食因緣得長，是名「養育」。
-^kp31.11
-五眾、十二入、十八界等諸法因緣，是眾法有數，故名「眾數」。
-^kp31.12
-行人法故，名為「人」。
-^kp31.13
-手足能有所作，名為「作者」。
-^kp31.14
-力能役他故，名「使作者」。
-^kp31.15
-能造後世罪福業故，名「能起者」。
-^kp31.16
-令他起後世罪福業故，名「使起者」。
-^kp31.17
-後身受罪福果報故，名「受者」。
-^kp31.18
-令他受苦樂，是名「使受者」。
-^kp31.19
-^kp31.20
-目覩色，名為「見者」。五識知，名為「知者」。
-^kp31.21
-復次，用眼見色，以五邪見^f35.113觀五眾，用世間、出世間正見觀諸法，是名「見者」，所謂眼根、五邪見、世間正見、無漏見，是名「見者」。
-餘四根所知及意識所知，通名為「知者」。
-如是諸法皆說是「神」。
-^kp31.22
-此神，十方三世諸佛及諸賢聖求之不可得，但憶想分別，強為其名。
-諸法亦如是，皆空無實，但假為其名。
-^kp31.23
-問曰：是神但有十六名字？更有餘名？
-答曰：略說則十六，廣說則無量。隨事起名，如官號差別^f35.114、工能智巧^f35.115、出家得道，種種諸名，皆是因緣和合生故無自性，無自性故畢竟空。
-^kp31.24
-生空故法空，法空故生亦空。
-^kp31.25
-^kp31.26
-^kp31.27
-釋曰：
-^kp31.28
-^kp31.29
-有二因緣故，菩薩智慧勝聲聞、辟支佛：一者、以空知一切法空，亦不見是空；空以^f35.119不空等一不異。二者、以此智慧，為欲度脫一切眾生令得涅槃。
-聲聞、辟支佛智慧但觀諸法空，不能觀世間、涅槃為一。^f35.120
-譬如人出獄，有但穿牆而出自脫身者；有破獄壞鎖，既自脫身，兼濟眾人者。
-^kp31.30
-復次，菩薩智慧入二法中故勝：一者、大悲，二者、般若波羅蜜。
-^kp31.31
-復有二法：一者、般舟三昧，二者、方便。
-^kp31.32
-復有二法：一者、常住禪定，二者、能通達法性。
-^kp31.33
-復有二法：一者、能代一切眾生受苦，二者、自捨一切樂。
-^kp31.34
-復有二法：一者、慈心，無怨無恚；二者、乃至諸佛功德，心亦不著。
-如是等種種功德莊嚴智慧故勝聲聞、辟支佛。
-^kp31.35
-問曰：諸鈍根者可以為喻，舍利弗智慧利根何以為喻？
-答曰：
-^kp31.36
-不必以鈍根為譬喻，譬喻為莊嚴論議、令人信著；故以五情所見以喻意識，令其得悟。譬如登樓，得梯則易上。
-^kp31.37
-復次，一切眾生著世間樂，聞道得^f35.121涅槃則不信不樂；以是故以眼見事，喻所不見。譬如苦藥，服之甚難；假之以蜜，服之則易。
-^kp31.38
-復次，舍利弗於聲聞中智慧第一，比諸佛菩薩未有現焉。
-^kp31.39
-「^kai[如閻浮提]」者，「^kai[閻浮]」，樹名，其林茂盛，此樹於林中最大。「^kai[提]」名為洲。
-此洲上有此樹林；林中有河，底有金沙，名為閻浮檀金；以閻浮樹故，名為「閻浮洲」。此洲有五百小洲圍繞，通名閻浮提。
-^kp31.40
-問曰：諸弟子甚多，何以故說「舍利弗、目揵連等，^taisho25p320b滿閻浮提中，如竹、麻、稻、茅^f35.122」？
-答曰：
-^kp31.41
-^kp31.42
-一切佛弟子中，智慧第一者舍利弗，神足第一者目揵連；此二人於佛法中大，於外法中亦大。^f35.123富樓那、迦郗^f35.124那、阿那律等，於佛法中雖大，於外法中不如。
-^kp31.43
-又此二人常在大眾助佛揚化，破諸外道；富樓那等比丘無是功德，是故不說。
-^kp31.44
-復次，若說舍利弗則攝一切智慧人，若說目揵連則攝一切禪定人。
-^kp31.45
-譬喻有二種：一者、假以為喻，二者、實事為喻。
-今此名為假喻。所以不以餘物為喻者，以此四物叢生稠^f35.125緻^f35.126、種類又多故。
-^kp31.46
-舍利弗、目連等比丘滿閻浮提，如是諸阿羅漢智慧和合不及菩薩智慧百分之一，乃至算數譬喻所不能及。
-^kp31.47
-問曰：何以不但說「算數譬喻所不能及」，而說「百分、千分不及一」？
-答曰：「^kai[算數譬喻所不能及]」者，是其極語。譬如人有重罪，先以打縛楚毒^f35.127，然後乃殺。
-如聲聞法中，常以「十六不及一」為喻；^f35.128大乘法中，則以「乃至算數譬喻所不能及」。
-^kp31.48
-^kp31.49
-釋曰：此義同上閻浮提，但以多為異。
-^kp31.50
-問曰：舍利弗、目連等雖多智慧無異，何以以^f35.131多為喻？
-答曰：有人謂少無力，多則有力。譬如水少，其力亦少。
-   又如絕健之人，少眾力寡不能制之，大軍攻之則伏。
-有^taisho25p320c人謂一舍利弗智慧少，則不及菩薩，多或能及。佛言：「雖多不及。」故以多為喻。如一切草木力不如火，一切諸明勢不及^f35.132日。
-亦如十方世界諸山，不如一金剛珠。所以者何？菩薩智慧是一切諸佛法本，能令一切眾生離苦得樂。
-如迦陵毘伽鳥子雖未出𣫘^f35.133，其音勝於眾鳥，何況出𣫘＊！
-菩薩智慧亦如是，雖未出無明𣫘＊，勝一切聲聞、辟支佛，何況成佛！
-又如轉輪聖王太子，雖未成就，福祚^f35.134威德勝於一切諸王，何況作轉輪聖王！
-菩薩亦如是，雖未成佛，無量阿僧祇劫集無量智慧福德故，勝於聲聞、辟支佛，何況成佛！
-^kp31.52
-^kp31.51
-問曰：先已說除佛智慧，過一切聲聞、辟支佛上，^f35.135今何以復重說？
-答曰：非重說也！
-^kp31.53
-上總相說，今別相說。
-^kp31.54
-先言「一切聲聞、辟支佛不及菩薩智慧」，今但明「不及一日智慧」，何況千萬歲！
-^kp31.56
-^kp31.55
-^kp31.57
-問曰：上佛已說「菩薩摩訶薩修智慧出過聲聞、辟支佛上」，今舍利弗何以故問？
-答曰：
-^kp31.58
-不問智慧勢力能度眾生，今但問佛及六^f35.138子智慧體^taisho25p321a性法中無有差別者。
-^kp31.59
-以諸賢聖智慧，皆是諸法實相慧，
-^kp31.60
-皆是四諦及三十七品慧，
-^kp31.61
-皆是出三界、入三脫門、成三乘果慧，
-以是故說無有差別。
-^kp31.62
-^kp31.63
-復次，如須陀洹以無漏智滅結得果，乃至佛亦如是；
-^kp31.64
-如須陀洹用二種解脫果──有為解脫、無為解脫，^f35.140乃至佛亦如是；
-^kp31.65
-如佛入涅槃，須陀洹極遲不過七世。
-^kp31.66
-皆同事^f35.141、同緣、同行、同果報，以是故言「無相違背」。所以者何？不生、性空故。
-^kp31.67
-^kp31.68
-問曰：破無明、集諸善法^f35.143故生智慧；是智慧，心相應、心共生、隨心行，是中云何說「智慧無生、性空，無有別異」？
-^kp31.69
-答曰^f35.144：
-^kp31.70
-^kp31.71
-智慧緣滅諦是「不生」；因緣和合故無有自性，是名「性空」，無所分別。
-智慧隨緣得名，如眼緣色生眼識，或名眼識、或名色識。智慧雖因緣和合作法，以緣無生、性空故名為「無生」、「性空」。
-^kp31.72
-問曰：諸賢聖智慧皆緣四諦生，何以但說滅諦？
-答曰：四諦中滅諦為上。所以者何^f35.145？是三諦皆屬滅諦故。譬如人請天子併食^f35.146群臣，亦名供養天子。
-^kp31.73
-復次，滅諦故說「無生」，三諦故說「性空」。
-^kp31.74
-復次，有人言：是諸智慧性自然不生、性自空。所以者何？一切法皆因緣和合故無自性，無自性故不生。
-^kp31.75
-問曰：若爾者，智慧、愚癡無有別異！
-答曰：
-^kp31.76
-諸法如，入法性中無有別異；如火各各不同，而滅相無異。
-譬如眾川萬流，各各異色異味，入於大海，同為一味一名；如是愚癡、智慧，入於般若波羅蜜中，皆同一味、無有差別。
-如五色近須彌山，自失其色，皆同金色；^f35.147如是內外諸法入般若波羅蜜中皆為一味。^taisho25p321b何以故？般若波羅蜜相畢竟清淨故。
-^kp31.77
-復次，愚癡實相即是智慧；若分別著此智慧即是愚癡。如是愚癡、智慧有何別異？
-^kp31.78
-初入佛法，是癡、是慧；轉後深入，癡、慧無異。
-^kp31.79
-以是故，是諸眾智無有別異、不相違背、不生、性空，故無咎。
-^kp31.80
-釋曰：
-^kp31.82
-^kp31.83
-^kp31.84
-有四種論：一者、必定論，二者、分別論，三者、反問論，四者、置論。^f35.149
-^kp31.85
-「必定論」者，如眾生中世尊為第一，一切法中無我，世間不可樂，涅槃為安隱寂滅，業因緣不失。如是等名為「必定論」。
-^kp31.86
-「分別論」者，
-^kp31.87
-^kai[如無畏太子問佛：「佛能說是語令他人瞋不？」]
-佛言：「是事當分別答。」
-太子言：「諸尼健^f35.150子輩了^f35.151矣！佛或時無^f35.152憐愍心故，出眾生於罪中，而眾生瞋，然眾生後當得利。」
-爾時無畏之子坐其膝上。
-佛問無畏：「汝子或時吞諸瓦石草木，汝聽咽不？」
-答言：「不聽。先教令吐；若不肯吐，左手捉耳，右手擿^f35.153口，縱令血出亦不置之。」
-佛言：「汝不愍之耶？」
-答言：「愍之深故，為出瓦石，雖當時痛，後得安隱。」
-^kai[佛言：「我亦如是。若眾生欲作重罪，善教不從，以苦言諫之，雖起瞋恚，後得安隱。」]^f35.154
-^kp31.88
-^kai[又如五比丘問佛：「受樂得道耶？」]
-^kai[佛言：「不必定。有受苦得罪，受苦得樂；有受樂得罪，受樂得福。」]^f35.155
-^kp31.89
-如是等名為「分別論」。
-^kp31.90
-「反問論」者，還以所問答之。^f35.156
-^kai[如佛告比丘：「於汝意云何？是^taisho25p321c色常耶？無常耶？」]
-比丘言：「無常。」
-「若無常，是苦不？」
-答言：「苦。」
-「若法是無常、苦，聞法聖弟子著是法，言『是法是我、是我所』不？」
-答曰：「不也！世尊！」
-^kai[佛告比丘：「從今已後，所有色，若過去、若未來、若現在、若內、若外、若好、若醜，是色非我所，我非此色所，如是應以正實智慧知；受、想、行、識亦如是。」]^f35.157
-如是等名「反問論」。
-^kp31.91
-「置論」者，如十四難：世間有常、世間無常、世間有邊、世間無邊。如是等是名為「置論」。^f35.158
-^kp31.92
-今佛以反問論答舍利弗。以舍利弗智於事未悟，佛反問事端，令其得解。
-^kp31.93
-^kp31.94
-^kp31.95
-菩薩度眾生智慧名為「道慧」。如後品中說：「薩婆若慧是聲聞辟支佛事，一切種智慧是諸佛事，道種慧是菩薩事。」^f35.159
-^kp31.96
-復次，八聖道分為實道；令眾生種種因緣入道，是名「道慧」。
-^kp31.97
-令眾生住於道中，是為「利益」聲聞種、辟支佛種、佛種。
-^kp31.98
-又復一切智慧無所不得，是名「一切種」。若有為、若無為，用一切種智知。
-^kp31.99
-得佛道已，應度一切眾生、利益一切眾生，或大乘、或聲聞乘、或辟支佛乘；若不入三乘道，教修福德，受天上人中富樂；若不能修福，以今世利益之事──衣、食、臥具等；若復不得，當以慈悲心利益。是名「^kai[度一切眾生]」。^f35.160
-^kp31.100
-問曰：若佛知一切聲聞、辟支佛不能為眾生，何以故問？
-答曰：佛意如是，欲令舍利弗口自說「諸聲聞、辟支佛不如菩薩」，是故佛問。
-^kp31.101
-舍利弗言：「^kai[不也！世尊！]」
-所以者何？聲聞、辟支佛雖有慈心，本不發心願度一切眾生，亦不迴善根向阿耨多羅三藐三菩提。
-^kp31.102
-以是故，菩薩一日修智慧，過聲聞、辟支^taisho25p322a佛上。
-舍利弗言：「不也！世尊！」
-佛告舍利弗：「以是因緣故，當知諸聲聞、辟支佛智慧欲比菩薩摩訶薩智慧，百分不及一，乃至算數譬喻所不能及。
-^kp31.103
-問曰：上已反問舍利弗事已定，今何以復問？
-答曰：
-^kp31.104
-以舍利弗欲以須陀洹同得解脫故，與諸佛菩薩等，而佛不聽。譬如有人欲以毛孔之空與虛空等。以是故佛重質其事。
-^kp31.105
-復次，雖同一事，義門各異。
-先言「智慧，為一切眾生故」，今言「頗有是念：『我等當得阿耨多羅三藐三菩提，令一切眾生得無餘涅槃』？」
-「無餘涅槃」者，義如先說。
-^kp31.106
-復次，一聲聞、辟支佛尚不作是念，何況一切聲聞、辟支佛！
-^kp31.107
-釋曰
-先略說「我當得阿耨多羅三藐三菩提」，今廣說得阿耨多羅三藐三菩提因緣，所謂六波羅蜜乃至十八不共法。
-「六波羅蜜」義，如先說。^f35.162
-「教化眾生、淨佛世界」，後當說。^f35.163
-餘「十力」等，如先說。^f35.164
-^kp31.110
-譬如螢火虫不作是念：『我力能照一^f35.165^taisho25p322b閻浮提普令大明。』諸阿羅漢、辟支佛亦如是，不作是念：『我等行六波羅蜜乃至十八不共法，得阿耨多羅三藐三菩提，度脫無量阿僧祇眾生令得涅槃。』
-^kp31.109
-釋曰：
-所以十方恒河沙舍利弗、目連不如一菩薩者，譬如螢火虫，雖眾多各有所照，不及於日。
-螢火虫亦不作是念：「我光明能照一閻浮提。」諸聲聞、辟支佛不作是念：「我智慧能照無量無邊眾生。」
-如螢火虫，夜能有所照，日出則不能。諸聲聞、辟支佛亦如是，未有大菩薩時，能師子吼說法教化；有菩薩出，不能有所作。
-^kp31.111
-釋曰：
-如日天子憐愍眾生故，與七寶宮殿俱繞四天下，從初至終常不懈息，為眾生除諸冷濕、照諸闇冥，令各得所。
-菩薩亦如是，從初發心，常行六波羅蜜乃至十八不共法，為度眾生無有懈息，除不善冷，乾竭五欲泥，破愚癡無明，教導修善業，令各得所。
-又日明普照，無憎無愛，隨其高下深淺悉照。
-菩薩亦如是，出於世間，住五神通，處於虛空，放智慧光^f35.166，照明^f35.167諸罪福業及諸果報。
-菩薩以智慧光明滅眾生邪見戲論；譬如朝露，見日則消。
+一、以何因緣故說〈奉鉢品〉 ^kp35.2
+
+二、釋經文義：四天王歡喜奉鉢 ^kp35.3
+
+（一）菩薩增益六波羅蜜時，諸天世人為何歡喜 ^kp35.4
+
+1、生天諸功德，皆由佛菩薩故有 ^kp35.5
+
+2、若佛出世，增益諸天眾，減損阿修羅 ^kp35.6
+
+3、若佛出世，能斷諸天疑網，能成大事 ^kp35.7
+
+4、聞菩薩增益六度，必當成佛，故諸天歡喜 ^kp35.8
+
+（1）若無佛菩薩出世，生天者少，修福處劣，果報不妙故 ^kp35.9
+
+（2）以佛菩薩出世故，知五欲、禪樂無常，能更求常樂涅槃故 ^kp35.10
+
+（二）釋「^四天王以鉢奉菩薩^」 ^kp35.11
+
+1、四天王奉鉢，諸天供養各有定法 ^kp35.12
+
+2、佛唯一身，何以受四鉢 ^kp35.13
+
+3、菩薩過無量阿僧祇劫然後成佛，四天王難得值遇，何故歡喜 ^kp35.14
+
+（1）同一姓故 ^kp35.15
+
+（2）作願欲值 ^kp35.16
+
+（3）四天王壽為人間九百萬歲，菩薩近成佛故，初生四天王可得值遇 ^kp35.17
+
+4、有佛不須鉢食，何以四天王定應奉鉢 ^kp35.18
+
+貳、諸天歡喜給侍供養、請轉法輪 ^kp35.19
+
+一、諸天歡喜供養，願減損阿修羅種，增益諸天眾 ^kp35.20
+
+二、釋疑：上已說「六欲天」歡喜供養，何以更說「三千大千世界四天王天乃至阿迦尼吒天」 ^kp35.21
+
+三、三藏中唯說「梵天」請轉法輪，今何以說「欲界、色界諸天」皆請轉法輪」 ^kp35.22
+
+四、釋「法輪」 ^kp35.23
+
+參、菩薩增益六度時，諸善男子、善女人樂為菩薩親眷 ^kp35.24
+
+一、前已說「能作是功德」，何故復說「增益六度」 ^kp35.25
+
+（一）前總說，今別說 ^kp35.26
+
+（二）前詳說，今略說 ^kp35.27
+
+（三）前為天說，今為人說 ^kp35.28
+
+二、釋經說「善男子、善女人」之意 ^kp35.29
+
+（一）三界諸天何故不說「善天」，而僅人中言「善男子、善女人」 ^kp35.30
+
+（二）何故唯說「男子、女人」善，不說「二根、無根者」善 ^kp35.31
+
+1、無根者、二根人之失 ^kp35.32
+
+（1）無根者 ^kp35.33
+
+（2）二根人 ^kp35.34
+
+（3）結 ^kp35.35
+
+2、男女多具善相，故說「善男子、善女人」 ^kp35.36
+
+三、善男子、善女人為何願作菩薩眷屬 ^kp35.37
+
+（一）自知福慧少，習近菩薩欲求度脫 ^kp35.38
+
+（二）知菩薩數往世間，發願欲與為因緣 ^kp35.39
+
+（三）欲習近厚德者，增益己功德 ^kp35.40
+
+1、標宗 ^kp35.41
+
+2、舉例 ^kp35.42
+
+（1）太子入龍宮凡求三珠 ^kp35.43
+
+（2）須摩提菩薩本生 ^kp35.44
+
+（3）妙光菩薩本生 ^kp35.45
+
+3、結 ^kp35.46
+
+肆、諸天作願令菩薩離婬欲 ^kp35.47
+
+一、何故諸天作願令菩薩離婬欲 ^kp35.48
+
+二、諸天以何方便助菩薩離婬欲 ^kp35.49
+
+三、斷淫欲出家成佛，非不斷 ^kp35.50
+
+伍、菩薩是否必須有眷屬，菩薩學佛須斷欲否 ^kp35.51
+
+一、有無斷欲之三種菩薩 ^kp35.52
+
+（一）或初有妻，受欲，後捨離出家［肉身菩薩］ ^kp35.53
+
+（二）或初發意斷淫欲，修童真梵行［肉身或法身菩薩］ ^kp35.54
+
+（三）或方便力受五欲，次出家得菩提［法身菩薩］ ^kp35.55
+
+二、明第三種法身菩薩，為眾生故，方便受欲而不染 ^kp35.56
+
+（一）何故獨為第三種菩薩作譬喻 ^kp35.57
+
+（二）為何以幻為喻，而不舉夢化等為喻 ^kp35.58
+
+（三）法身菩薩如幻師，為度眾生故現受五欲 ^kp35.59
+
+（四）菩薩常呵五欲，不染於欲 ^kp35.60
+
+1、欲為熾然 ^kp35.61
+
+2、欲為穢惡 ^kp35.62
+
+3、欲為毀壞 ^kp35.63
+
+4、欲為如怨 ^kp35.64
+
+陸、開宗正說菩薩應如何行般若波羅蜜 ^kp35.65
+
+一、釋「^菩薩摩訶薩云何應行般若波羅蜜^」 ^kp35.66
+
+（一）舍利弗何故重問如何行般若 ^kp35.67
+
+（二）先已說行般若，今何以更問 ^kp35.68
+
+1、上總問諸波羅蜜，今但問般若 ^kp35.69
+
+2、上廣讚般若，今直問行般若 ^kp35.70
+
+3、眾人渴仰欲得般若，舍利弗為眾故問 ^kp35.71
+
+4、若舍利弗不問，則佛讚般若不止 ^kp35.72
+
+5、結 ^kp35.73
+
+二、釋「^菩薩摩訶薩行般若波羅蜜時，不見菩薩，不見菩薩字，不見般若波羅蜜^」 ^kp35.74
+
+（一）菩薩行般若時，若不見菩薩及般若，如何能行 ^kp35.75
+
+（二）般若見實可信，出則不可信 ^kp35.76
+
+（三）釋疑：「出觀見有，諸法應非常空」疑 ^kp35.77
+
+（四）何以先說眾生空，後說一切法空 ^kp35.78
+
+1、我空易解故先說 ^kp35.79
+
+（1）我不以五情得，但憶想分別生我想，易解 ^kp35.80
+
+（2）色等諸法現眼所見，難見 ^kp35.81
+
+（3）結成：先破我，次破我所，則一切法皆空，名為得道 ^kp35.82
+
+2、般若教法無定說 ^kp35.83
+
+三、釋「^不見我行、不行般若波羅蜜，乃至但有名字故謂為空^」 ^kp35.84
+
+（一）釋「^不見我行般若，亦不見我不行般若^」 ^kp35.85
+
+1、就凡聖明行不行義 ^kp35.86
+
+2、約因果明行不行義 ^kp35.87
+
+3、就憍慢、懈怠解行不行義 ^kp35.88
+
+4、約破有無見言行不行義 ^kp35.89
+
+5、約止戲論、息懈怠釋行不行義 ^kp35.90
+
+（二）釋「^菩薩、菩薩字性空^」 ^kp35.91
+
+（三）釋「^空中無色，乃至但有名字謂為菩提，但有名字謂為菩薩，但有名字謂為空^」 ^kp35.92
+
+（四）釋疑：何故前說「^不見菩薩、菩薩字、般若^」，後復說「^但有名謂為菩提、菩薩、空^」 ^kp35.93
+
+四、釋「^諸法實性，無生、無滅、無垢、無淨^」 ^kp35.94
+
+五、釋「^菩薩如是行，亦不見生、滅、垢、淨。何以故？名字是因緣法，但以分別假名說^」 ^kp35.95
+
+六、釋「^菩薩行般若時，不見一切名字，不見故不著^」 ^kp35.96
+
+壹、眾生與諸法但有名字，所說名字亦不可見 ^kp35.97
+
+一、重說「空」之理由 ^kp35.98
+
+（一）上多說法空，今雜說人法二空 ^kp35.99
+
+（二）我空易知，法空難見 ^kp35.100
+
+二、我空與法空 ^kp35.101
+
+（一）「我」之十六種異名 ^kp35.102
+
+1、我 ^kp35.103
+
+2、眾生 ^kp35.104
+
+3、壽者，4、命者 ^kp35.105
+
+5、生者 ^kp35.106
+
+6、養育 ^kp35.107
+
+7、眾數 ^kp35.108
+
+8、人 ^kp35.109
+
+9、作者 ^kp35.110
+
+10、使作者 ^kp35.111
+
+11、能起者 ^kp35.112
+
+12、使起者 ^kp35.113
+
+13、受者 ^kp35.114
+
+14、使受者 ^kp35.115
+
+15、見者，16、知者 ^kp35.116
+
+（1）第一說 ^kp35.117
+
+（2）第二說 ^kp35.118
+
+（二）「神我與諸法」唯假名，皆空無實 ^kp35.119
+
+（三）「神我」廣說無量名，皆因緣和合生，無自性、畢竟空 ^kp35.120
+
+（四）二空：生空故法空，法空故生空 ^kp35.121
+
+貳、讚歎菩薩智慧勝一切二乘 ^kp35.122
+
+（壹）菩薩行般若，用不可得空故，智慧勝過二乘 ^kp35.123
+
+（貳）舉滿閻浮提喻辨優劣 ^kp35.124
+
+一、菩薩勝小乘智慧［二緣］ ^kp35.125
+
+（一）以知空，空復空，空與不空一等無異；以此智度一切生 ^kp35.126
+
+（二）大悲，般若 ^kp35.127
+
+（三）般舟三昧，方便 ^kp35.128
+
+（四）常住禪定，能達法性 ^kp35.129
+
+（五）代眾生受苦，自捨一切樂 ^kp35.130
+
+（六）慈心，一切功德不著 ^kp35.131
+
+二、云何以舍利弗利根者智慧為喻 ^kp35.132
+
+（一）但為莊嚴論議、令人生信 ^kp35.133
+
+（二）以現量易解事喻難解事 ^kp35.134
+
+（三）舍利弗雖聲聞智慧第一，未及諸佛菩薩故 ^kp35.135
+
+三、釋「^如閻浮提^」 ^kp35.136
+
+四、釋「^以滿閻浮提如竹、麻、稻、茅之數，盡似舍利弗、目揵連^」 ^kp35.137
+
+（一）何故以「舍利弗、目揵連」為例 ^kp35.138
+
+1、於佛法、外法中皆勝故 ^kp35.139
+
+2、常助佛揚化，破外道故 ^kp35.140
+
+3、攝盡諸智慧、禪定人故 ^kp35.141
+
+（二）何故以「竹、麻、稻、茅」為例──假以為喻 ^kp35.142
+
+（三）結 ^kp35.143
+
+五、釋「百分、千分不及一」 ^kp35.144
+
+（參）舉滿三千大千世界、滿十方如恒河沙等世界喻辨優劣 ^kp35.145
+
+一、舉義同前，量多為異 ^kp35.146
+
+二、以多為喻之理由 ^kp35.147
+
+參、菩薩行般若一日修智慧勝一切二乘智慧 ^kp35.148
+
+（壹）總標菩薩智慧勝一切二乘 ^kp35.149
+
+一、前明總相；今示別相 ^kp35.150
+
+二、前說二乘不及菩薩智慧；今云「不及菩薩一日智慧」 ^kp35.151
+
+（貳）明菩薩智慧勝二乘之理由 ^kp35.152
+
+一、舍利弗問：三乘智慧無生性空無別，云何菩薩智慧勝 ^kp35.153
+
+（一）舍利弗約三乘智慧無生、性空、無別作難 ^kp35.154
+
+1、顯聖慧無別 ^kp35.155
+
+（1）皆是諸法實相慧 ^kp35.156
+
+（2）皆是四諦及道品慧 ^kp35.157
+
+（3）皆是出三界、入三脫〔門〕，成三乘果慧 ^kp35.158
+
+2、顯行果無別 ^kp35.159
+
+（1）皆以無漏智滅結得果 ^kp35.160
+
+（2）皆用二種解脫果 ^kp35.161
+
+（3）皆能入涅槃故 ^kp35.162
+
+3、結成 ^kp35.163
+
+（二）答難：「無生、性空，大小智慧云何優劣」疑 ^kp35.164
+
+1、問：智慧何故無生性空 ^kp35.165
+
+2、答 ^kp35.166
+
+（1）小解 ^kp35.167
+
+（2）大解：慧從緣生無自性故 ^kp35.168
+
+（三）愚智一如 ^kp35.169
+
+1、諸法入法性中，無有別異。入般若中，一味常淨 ^kp35.170
+
+2、愚癡實相即智慧，若執著智慧即愚癡，有何別異 ^kp35.171
+
+3、初入佛法，是癡是慧；轉後深入，智愚無異 ^kp35.172
+
+（四）結 ^kp35.173
+
+二、佛答：三乘用心有別 ^kp35.174
+
+（一）菩薩欲以一切種智度一切眾生故 ^kp35.175
+
+1、釋佛所說 ^kp35.176
+
+（2）釋「^行道慧益一切眾生^」 ^kp35.177
+
+（3）釋「^當以一切種智知一切法^」 ^kp35.178
+
+（4）釋「^度一切眾生^」 ^kp35.179
+
+2、釋舍利弗所答 ^kp35.180
+
+3、結成 ^kp35.181
+
+（二）明二乘無求無上菩提願，無度一切眾生願故不及菩薩 ^kp35.182
+
+1、大空小空：毛空與虛空 ^kp35.183
+
+2、事同義異 ^kp35.184
+
+3、以一況多 ^kp35.185
+
+（三）菩薩欲行一切功德，成圓滿覺，度一切眾生故 ^kp35.186
+
+1、先明二乘不欲求十力等佛功德，不念度無量眾生 ^kp35.187
+
+2、次明菩薩能行六度，欲具足十力等佛功德，度脫無量眾生 ^kp35.188
+
+（1）舉螢火喻二乘劣 ^kp35.189
+
+（2）舉慧日喻菩薩勝 ^kp35.190
