--- a/mpps.35/kp-35.md
+++ b/mpps.35/kp-35.md
@@ -1,379 +1,593 @@
-壹、菩薩行般若波羅蜜，四天王歡喜奉鉢 ^kp35.1
+壹、菩薩行般若波羅蜜，四天王歡喜奉鉢 ^kp-35-1
 
-一、以何因緣故說〈奉鉢品〉 ^kp35.2
+ 一、以何因緣故說〈奉鉢品〉 ^kp-35-2
 
-二、釋經文義：四天王歡喜奉鉢 ^kp35.3
+ 二、釋經文義：四天王歡喜奉鉢 ^kp-35-3
 
-（一）菩薩增益六波羅蜜時，諸天世人為何歡喜 ^kp35.4
+ （一）菩薩增益六波羅蜜時，諸天世人為何歡喜 ^kp-35-4
 
-1、生天諸功德，皆由佛菩薩故有 ^kp35.5
+ 1、生天諸功德，皆由佛菩薩故有 ^kp-35-5
 
-2、若佛出世，增益諸天眾，減損阿修羅 ^kp35.6
+ 2、若佛出世，增益諸天眾，減損阿修羅 ^kp-35-6
 
-3、若佛出世，能斷諸天疑網，能成大事 ^kp35.7
+ 3、若佛出世，能斷諸天疑網，能成大事 ^kp-35-7
 
-4、聞菩薩增益六度，必當成佛，故諸天歡喜 ^kp35.8
+ 4、聞菩薩增益六度，必當成佛，故諸天歡喜 ^kp-35-8
 
-（1）若無佛菩薩出世，生天者少，修福處劣，果報不妙故 ^kp35.9
+ ※ 因論生論：夜摩天以上諸天無阿修羅難，何故歡喜 ^kp-35-9
 
-（2）以佛菩薩出世故，知五欲、禪樂無常，能更求常樂涅槃故 ^kp35.10
+ （1）若無佛菩薩出世，生天者少，修福處劣，果報不妙故 ^kp-35-10
 
-（二）釋「^四天王以鉢奉菩薩^」 ^kp35.11
+ （2）以佛菩薩出世故，知五欲、禪樂無常，能更求常樂涅槃故 ^kp-35-11
 
-1、四天王奉鉢，諸天供養各有定法 ^kp35.12
+ （二）釋「四天王以鉢奉菩薩」 ^kp-35-12
 
-2、佛唯一身，何以受四鉢 ^kp35.13
+ 1、四天王奉鉢，諸天供養各有定法 ^kp-35-13
 
-3、菩薩過無量阿僧祇劫然後成佛，四天王難得值遇，何故歡喜 ^kp35.14
+ 2、佛唯一身，何以受四鉢 ^kp-35-14
 
-（1）同一姓故 ^kp35.15
+ 3、菩薩過無量阿僧祇劫然後成佛，四天王難得值遇，何故歡喜 ^kp-35-15
 
-（2）作願欲值 ^kp35.16
+ （1）同一姓故 ^kp-35-16
 
-（3）四天王壽為人間九百萬歲，菩薩近成佛故，初生四天王可得值遇 ^kp35.17
+ （2）作願欲值 ^kp-35-17
 
-4、有佛不須鉢食，何以四天王定應奉鉢 ^kp35.18
+ （3）四天王壽為人間九百萬歲，菩薩近成佛故，初生四天王可得值遇 ^kp-35-18
 
-貳、諸天歡喜給侍供養、請轉法輪 ^kp35.19
+ 4、有佛不須鉢食，何以四天王定應奉鉢 ^kp-35-19
 
-一、諸天歡喜供養，願減損阿修羅種，增益諸天眾 ^kp35.20
+貳、諸天歡喜給侍供養、請轉法輪 ^kp-35-20
 
-二、釋疑：上已說「六欲天」歡喜供養，何以更說「三千大千世界四天王天乃至阿迦尼吒天」 ^kp35.21
+ 一、諸天歡喜供養，願減損阿修羅種，增益諸天眾 ^kp-35-21
 
-三、三藏中唯說「梵天」請轉法輪，今何以說「欲界、色界諸天」皆請轉法輪」 ^kp35.22
+ \`1000\`二、釋疑：上已說「六欲天」歡喜供養，何以更說「三千大千世界四天王天乃至阿迦尼吒天」 ^kp-35-22
 
-四、釋「法輪」 ^kp35.23
+ 三、三藏中唯說「梵天」請轉法輪，今何以說「欲界、色界諸天」皆請轉法輪」 ^kp-35-23
 
-參、菩薩增益六度時，諸善男子、善女人樂為菩薩親眷 ^kp35.24
+ 四、釋「法輪」 ^kp-35-24
 
-一、前已說「能作是功德」，何故復說「增益六度」 ^kp35.25
+參、菩薩增益六度時，諸善男子、善女人樂為菩薩親眷 ^kp-35-25
 
-（一）前總說，今別說 ^kp35.26
+ 一、前已說「能作是功德」，何故復說「增益六度」 ^kp-35-26
 
-（二）前詳說，今略說 ^kp35.27
+ （一）前總說，今別說 ^kp-35-27
 
-（三）前為天說，今為人說 ^kp35.28
+ （二）前詳說，今略說 ^kp-35-28
 
-二、釋經說「善男子、善女人」之意 ^kp35.29
+ （三）前為天說，今為人說 ^kp-35-29
 
-（一）三界諸天何故不說「善天」，而僅人中言「善男子、善女人」 ^kp35.30
+ \`1001\`二、釋經說「善男子、善女人」之意 ^kp-35-30
 
-（二）何故唯說「男子、女人」善，不說「二根、無根者」善 ^kp35.31
+ （一）三界諸天何故不說「善天」，而僅人中言「善男子、善女人」 ^kp-35-31
 
-1、無根者、二根人之失 ^kp35.32
+ （二）何故唯說「男子、女人」善，不說「二根、無根者」善 ^kp-35-32
 
-（1）無根者 ^kp35.33
+ 1、無根者、二根人之失 ^kp-35-33
 
-（2）二根人 ^kp35.34
+ （1）無根者 ^kp-35-34
 
-（3）結 ^kp35.35
+ A、聲聞之說──無得道相 ^kp-35-35
 
-2、男女多具善相，故說「善男子、善女人」 ^kp35.36
+ B、大乘之說──少能修善 ^kp-35-36
 
-三、善男子、善女人為何願作菩薩眷屬 ^kp35.37
+ （2）二根人 ^kp-35-37
 
-（一）自知福慧少，習近菩薩欲求度脫 ^kp35.38
+ （3）結 ^kp-35-38
 
-（二）知菩薩數往世間，發願欲與為因緣 ^kp35.39
+ 2、男女多具善相，故說「善男子、善女人」 ^kp-35-39
 
-（三）欲習近厚德者，增益己功德 ^kp35.40
+ 三、善男子、善女人為何願作菩薩眷屬 ^kp-35-40
 
-1、標宗 ^kp35.41
+ （一）自知福慧少，習近菩薩欲求度脫 ^kp-35-41
 
-2、舉例 ^kp35.42
+ （二）知菩薩數往世間，發願欲與為因緣 ^kp-35-42
 
-（1）太子入龍宮凡求三珠 ^kp35.43
+ （三）欲習近厚德者，增益己功德 ^kp-35-43
 
-（2）須摩提菩薩本生 ^kp35.44
+ 1、標宗 ^kp-35-44
 
-（3）妙光菩薩本生 ^kp35.45
+ 2、舉例 ^kp-35-45
 
-3、結 ^kp35.46
+ （1）太子入龍宮凡求三珠[^35.37]（印順法師，《大智度論筆記》〔H013〕p.404） ^kp-35-46
 
-肆、諸天作願令菩薩離婬欲 ^kp35.47
+ （2）須摩提菩薩本生[^35.41] ^kp-35-47
 
-一、何故諸天作願令菩薩離婬欲 ^kp35.48
+ （3）妙光菩薩本生 ^kp-35-48
 
-二、諸天以何方便助菩薩離婬欲 ^kp35.49
+ 3、結 ^kp-35-49
 
-三、斷淫欲出家成佛，非不斷 ^kp35.50
+肆、諸天作願令菩薩離婬欲 ^kp-35-50
 
-伍、菩薩是否必須有眷屬，菩薩學佛須斷欲否 ^kp35.51
+ 一、何故諸天作願令菩薩離婬欲 ^kp-35-51
 
-一、有無斷欲之三種菩薩 ^kp35.52
+ 二、諸天以何方便助菩薩離婬欲 ^kp-35-52
 
-（一）或初有妻，受欲，後捨離出家［肉身菩薩］ ^kp35.53
+ 三、斷淫欲出家成佛，非不斷（印順法師，《大智度論筆記》〔E025〕p.324） ^kp-35-53
 
-（二）或初發意斷淫欲，修童真梵行［肉身或法身菩薩］ ^kp35.54
+伍、菩薩是否必須有眷屬，菩薩學佛須斷欲否[^35.59] ^kp-35-54
 
-（三）或方便力受五欲，次出家得菩提［法身菩薩］ ^kp35.55
+ 一、有無斷欲之三種菩薩 ^kp-35-55
 
-二、明第三種法身菩薩，為眾生故，方便受欲而不染 ^kp35.56
+ （一）或初有妻，受欲，後捨離出家［肉身菩薩］（印順法師，《大智度論筆記》［F031］p.361） ^kp-35-56
 
-（一）何故獨為第三種菩薩作譬喻 ^kp35.57
+ （二）或初發意斷淫欲，修童真梵行［肉身或法身菩薩］（印順法師，《大智度論筆記》［F031］p.361） ^kp-35-57
 
-（二）為何以幻為喻，而不舉夢化等為喻 ^kp35.58
+ （三）或方便力受五欲，次出家得菩提［法身菩薩］（印順法師，《大智度論筆記》［F031］p.361） ^kp-35-58
 
-（三）法身菩薩如幻師，為度眾生故現受五欲 ^kp35.59
+ 二、明第三種法身菩薩，為眾生故，方便受欲而不染 ^kp-35-59
 
-（四）菩薩常呵五欲，不染於欲 ^kp35.60
+ （一）何故獨為第三種菩薩作譬喻 ^kp-35-60
 
-1、欲為熾然 ^kp35.61
+ （二）為何以幻為喻，而不舉夢化等為喻 ^kp-35-61
 
-2、欲為穢惡 ^kp35.62
+ （三）法身菩薩如幻師，為度眾生故現受五欲 ^kp-35-62
 
-3、欲為毀壞 ^kp35.63
+ （四）菩薩常呵五欲，不染於欲 ^kp-35-63
 
-4、欲為如怨 ^kp35.64
+ 1、欲為熾然 ^kp-35-64
 
-陸、開宗正說菩薩應如何行般若波羅蜜 ^kp35.65
+ 2、欲為穢惡 ^kp-35-65
 
-一、釋「^菩薩摩訶薩云何應行般若波羅蜜^」 ^kp35.66
+ 3、欲為毀壞 ^kp-35-66
 
-（一）舍利弗何故重問如何行般若 ^kp35.67
+ 4、欲為如怨 ^kp-35-67
 
-（二）先已說行般若，今何以更問 ^kp35.68
+陸、開宗正說菩薩應如何行般若波羅蜜 ^kp-35-68
 
-1、上總問諸波羅蜜，今但問般若 ^kp35.69
+ 一、釋「菩薩摩訶薩云何應行般若波羅蜜」 ^kp-35-69
 
-2、上廣讚般若，今直問行般若 ^kp35.70
+ （一）舍利弗何故重問如何行般若 ^kp-35-70
 
-3、眾人渴仰欲得般若，舍利弗為眾故問 ^kp35.71
+ （二）先已說行般若，今何以更問 ^kp-35-71
 
-4、若舍利弗不問，則佛讚般若不止 ^kp35.72
+ 1、上總問諸波羅蜜，今但問般若 ^kp-35-72
 
-5、結 ^kp35.73
+ 2、上廣讚般若，今直問行般若 ^kp-35-73
 
-二、釋「^菩薩摩訶薩行般若波羅蜜時，不見菩薩，不見菩薩字，不見般若波羅蜜^」 ^kp35.74
+ 3、眾人渴仰欲得般若，舍利弗為眾故問 ^kp-35-74
 
-（一）菩薩行般若時，若不見菩薩及般若，如何能行 ^kp35.75
+ 4、若舍利弗不問，則佛讚般若不止 ^kp-35-75
 
-（二）般若見實可信，出則不可信 ^kp35.76
+ ※ 因論生論：般若功重，佛廣讚有何過 ^kp-35-76
 
-（三）釋疑：「出觀見有，諸法應非常空」疑 ^kp35.77
+ 5、結 ^kp-35-77
 
-（四）何以先說眾生空，後說一切法空 ^kp35.78
+ 二、釋「菩薩摩訶薩行般若波羅蜜時，不見菩薩，不見菩薩字，不見般若波羅蜜」 ^kp-35-78
 
-1、我空易解故先說 ^kp35.79
+ （一）菩薩行般若時，若不見菩薩及般若，如何能行 ^kp-35-79
 
-（1）我不以五情得，但憶想分別生我想，易解 ^kp35.80
+ （二）般若見實可信，出則不可信（印順法師，《大智度論筆記》〔D030〕p.280） ^kp-35-80
 
-（2）色等諸法現眼所見，難見 ^kp35.81
+ （三）釋疑：「出觀見有，諸法應非常空」疑[^35.84]（印順法師，《大智度論筆記》〔D019〕p.264） ^kp-35-81
 
-（3）結成：先破我，次破我所，則一切法皆空，名為得道 ^kp35.82
+ （四）何以先說眾生空，後說一切法空 ^kp-35-82
 
-2、般若教法無定說 ^kp35.83
+ 1、我空易解故先說 ^kp-35-83
 
-三、釋「^不見我行、不行般若波羅蜜，乃至但有名字故謂為空^」 ^kp35.84
+ （1）我不以五情得，但憶想分別生我想，易解（印順法師，《大智度論筆記》［D014］p.257） ^kp-35-84
 
-（一）釋「^不見我行般若，亦不見我不行般若^」 ^kp35.85
+ （2）色等諸法現眼所見，難見（印順法師，《大智度論筆記》〔D014〕p.257） ^kp-35-85
 
-1、就凡聖明行不行義 ^kp35.86
+ （3）結成：先破我，次破我所，則一切法皆空，名為得道 ^kp-35-86
 
-2、約因果明行不行義 ^kp35.87
+ 2、般若教法無定說 ^kp-35-87
 
-3、就憍慢、懈怠解行不行義 ^kp35.88
+ 三、釋「不見我行、不行般若波羅蜜，乃至但有名字故謂為空」 ^kp-35-88
 
-4、約破有無見言行不行義 ^kp35.89
+ \`1011\`（一）釋「不見我行般若，亦不見我不行般若」 ^kp-35-89
 
-5、約止戲論、息懈怠釋行不行義 ^kp35.90
+ 1、就凡聖明行不行義 ^kp-35-90
 
-（二）釋「^菩薩、菩薩字性空^」 ^kp35.91
+ 2、約因果明行不行義 ^kp-35-91
 
-（三）釋「^空中無色，乃至但有名字謂為菩提，但有名字謂為菩薩，但有名字謂為空^」 ^kp35.92
+ 3、就憍慢、懈怠解行不行義 ^kp-35-92
 
-（四）釋疑：何故前說「^不見菩薩、菩薩字、般若^」，後復說「^但有名謂為菩提、菩薩、空^」 ^kp35.93
+ 4、約破有無見言行不行義 ^kp-35-93
 
-四、釋「^諸法實性，無生、無滅、無垢、無淨^」 ^kp35.94
+ 5、約止戲論、息懈怠釋行不行義 ^kp-35-94
 
-五、釋「^菩薩如是行，亦不見生、滅、垢、淨。何以故？名字是因緣法，但以分別假名說^」 ^kp35.95
+ （二）釋「菩薩、菩薩字性空」 ^kp-35-95
 
-六、釋「^菩薩行般若時，不見一切名字，不見故不著^」 ^kp35.96
+ （三）釋「空中無色，乃至但有名字謂為菩提，但有名字謂為菩薩，但有名字謂為空」[^35.93] ^kp-35-96
 
-壹、眾生與諸法但有名字，所說名字亦不可見 ^kp35.97
+ （四）釋疑：何故前說「不見菩薩、菩薩字、般若」，後復說「但有名謂為菩提、菩薩、空」 ^kp-35-97
 
-一、重說「空」之理由 ^kp35.98
+ 四、釋「諸法實性，無生、無滅、無垢、無淨」 ^kp-35-98
 
-（一）上多說法空，今雜說人法二空 ^kp35.99
+ 五、釋「菩薩如是行，亦不見生、滅、垢、淨。何以故？名字是因緣法，但以分別假名說」 ^kp-35-99
 
-（二）我空易知，法空難見 ^kp35.100
+ 六、釋「菩薩行般若時，不見一切名字，不見故不著」 ^kp-35-100
 
-二、我空與法空 ^kp35.101
+ ※ ^kp-35-101
 
-（一）「我」之十六種異名 ^kp35.102
+壹、眾生與諸法但有名字，所說名字亦不可見 ^kp-35-102
 
-1、我 ^kp35.103
+ 一、重說「空」之理由 ^kp-35-103
 
-2、眾生 ^kp35.104
+ （一）上多說法空，今雜說人法二空 ^kp-35-104
 
-3、壽者，4、命者 ^kp35.105
+ （二）我空易知，法空難見 ^kp-35-105
 
-5、生者 ^kp35.106
+ 二、我空與法空 ^kp-35-106
 
-6、養育 ^kp35.107
+ （一）「我」之十六種異名 ^kp-35-107
 
-7、眾數 ^kp35.108
+ 1、我 ^kp-35-108
 
-8、人 ^kp35.109
+ 2、眾生 ^kp-35-109
 
-9、作者 ^kp35.110
+ 3、壽者，4、命者 ^kp-35-110
 
-10、使作者 ^kp35.111
+ 5、生者 ^kp-35-111
 
-11、能起者 ^kp35.112
+ 6、養育 ^kp-35-112
 
-12、使起者 ^kp35.113
+ 7、眾數 ^kp-35-113
 
-13、受者 ^kp35.114
+ 8、人 ^kp-35-114
 
-14、使受者 ^kp35.115
+ 9、作者 ^kp-35-115
 
-15、見者，16、知者 ^kp35.116
+ 10、使作者 ^kp-35-116
 
-（1）第一說 ^kp35.117
+ 11、能起者 ^kp-35-117
 
-（2）第二說 ^kp35.118
+ 12、使起者 ^kp-35-118
 
-（二）「神我與諸法」唯假名，皆空無實 ^kp35.119
+ 13、受者 ^kp-35-119
 
-（三）「神我」廣說無量名，皆因緣和合生，無自性、畢竟空 ^kp35.120
+ 14、使受者 ^kp-35-120
 
-（四）二空：生空故法空，法空故生空 ^kp35.121
+ 15、見者，16、知者 ^kp-35-121
 
-貳、讚歎菩薩智慧勝一切二乘 ^kp35.122
+ （1）第一說 ^kp-35-122
 
-（壹）菩薩行般若，用不可得空故，智慧勝過二乘 ^kp35.123
+ （2）第二說 ^kp-35-123
 
-（貳）舉滿閻浮提喻辨優劣 ^kp35.124
+ （二）「神我與諸法」唯假名，皆空無實 ^kp-35-124
 
-一、菩薩勝小乘智慧［二緣］ ^kp35.125
+ （三）「神我」廣說無量名，皆因緣和合生，無自性、畢竟空 ^kp-35-125
 
-（一）以知空，空復空，空與不空一等無異；以此智度一切生 ^kp35.126
+ （四）二空：生空故法空，法空故生空（印順法師，《大智度論筆記》〔D014〕p.257） ^kp-35-126
 
-（二）大悲，般若 ^kp35.127
+貳、讚歎菩薩智慧勝一切二乘[^35.116] ^kp-35-127
 
-（三）般舟三昧，方便 ^kp35.128
+ \`1016\`（壹）菩薩行般若，用不可得空故，智慧勝過二乘 ^kp-35-128
 
-（四）常住禪定，能達法性 ^kp35.129
+ （貳）舉滿閻浮提喻辨優劣 ^kp-35-129
 
-（五）代眾生受苦，自捨一切樂 ^kp35.130
+ 一、菩薩勝小乘智慧［二緣］[^35.118]（印順法師，《大智度論筆記》［F032］p.363） ^kp-35-130
 
-（六）慈心，一切功德不著 ^kp35.131
+ （一）以知空，空復空，空與不空一等無異；以此智度一切生 ^kp-35-131
 
-二、云何以舍利弗利根者智慧為喻 ^kp35.132
+ （二）大悲，般若 ^kp-35-132
 
-（一）但為莊嚴論議、令人生信 ^kp35.133
+ （三）般舟三昧，方便 ^kp-35-133
 
-（二）以現量易解事喻難解事 ^kp35.134
+ （四）常住禪定，能達法性 ^kp-35-134
 
-（三）舍利弗雖聲聞智慧第一，未及諸佛菩薩故 ^kp35.135
+ （五）代眾生受苦，自捨一切樂 ^kp-35-135
 
-三、釋「^如閻浮提^」 ^kp35.136
+ （六）慈心，一切功德不著 ^kp-35-136
 
-四、釋「^以滿閻浮提如竹、麻、稻、茅之數，盡似舍利弗、目揵連^」 ^kp35.137
+ 二、云何以舍利弗利根者智慧為喻 ^kp-35-137
 
-（一）何故以「舍利弗、目揵連」為例 ^kp35.138
+ （一）但為莊嚴論議、令人生信 ^kp-35-138
 
-1、於佛法、外法中皆勝故 ^kp35.139
+ （二）以現量易解事喻難解事 ^kp-35-139
 
-2、常助佛揚化，破外道故 ^kp35.140
+ （三）舍利弗雖聲聞智慧第一，未及諸佛菩薩故 ^kp-35-140
 
-3、攝盡諸智慧、禪定人故 ^kp35.141
+ 三、釋「如閻浮提」 ^kp-35-141
 
-（二）何故以「竹、麻、稻、茅」為例──假以為喻 ^kp35.142
+ 四、釋「以滿閻浮提如竹、麻、稻、茅之數，盡似舍利弗、目揵連」 ^kp-35-142
 
-（三）結 ^kp35.143
+ （一）何故以「舍利弗、目揵連」為例 ^kp-35-143
 
-五、釋「百分、千分不及一」 ^kp35.144
+ 1、於佛法、外法中皆勝故 ^kp-35-144
 
-（參）舉滿三千大千世界、滿十方如恒河沙等世界喻辨優劣 ^kp35.145
+ 2、常助佛揚化，破外道故 ^kp-35-145
 
-一、舉義同前，量多為異 ^kp35.146
+ 3、攝盡諸智慧、禪定人故 ^kp-35-146
 
-二、以多為喻之理由 ^kp35.147
+ （二）何故以「竹、麻、稻、茅」為例──假以為喻 ^kp-35-147
 
-參、菩薩行般若一日修智慧勝一切二乘智慧 ^kp35.148
+ （三）結 ^kp-35-148
 
-（壹）總標菩薩智慧勝一切二乘 ^kp35.149
+ \`1018\`五、釋「百分、千分不及一」 ^kp-35-149
 
-一、前明總相；今示別相 ^kp35.150
+ （參）舉滿三千大千世界、滿十方如恒河沙等世界喻辨優劣 ^kp-35-150
 
-二、前說二乘不及菩薩智慧；今云「不及菩薩一日智慧」 ^kp35.151
+ 一、舉義同前，量多為異 ^kp-35-151
 
-（貳）明菩薩智慧勝二乘之理由 ^kp35.152
+ 二、以多為喻之理由 ^kp-35-152
 
-一、舍利弗問：三乘智慧無生性空無別，云何菩薩智慧勝 ^kp35.153
+\`1019\`參、菩薩行般若一日修智慧勝一切二乘智慧 ^kp-35-153
 
-（一）舍利弗約三乘智慧無生、性空、無別作難 ^kp35.154
+ （壹）總標菩薩智慧勝一切二乘 ^kp-35-154
 
-1、顯聖慧無別 ^kp35.155
+ 一、前明總相；今示別相 ^kp-35-155
 
-（1）皆是諸法實相慧 ^kp35.156
+ 二、前說二乘不及菩薩智慧；今云「不及菩薩一日智慧」 ^kp-35-156
 
-（2）皆是四諦及道品慧 ^kp35.157
+ （貳）明菩薩智慧勝二乘之理由[^35.136] ^kp-35-157
 
-（3）皆是出三界、入三脫〔門〕，成三乘果慧 ^kp35.158
+ 一、舍利弗問：三乘智慧無生性空無別，云何菩薩智慧勝 ^kp-35-158
 
-2、顯行果無別 ^kp35.159
+ （一）舍利弗約三乘智慧無生、性空、無別作難（印順法師，《大智度論筆記》［F032］p.363） ^kp-35-159
 
-（1）皆以無漏智滅結得果 ^kp35.160
+ 1、顯聖慧無別 ^kp-35-160
 
-（2）皆用二種解脫果 ^kp35.161
+ （1）皆是諸法實相慧（印順法師，《大智度論筆記》［F032］p.363） ^kp-35-161
 
-（3）皆能入涅槃故 ^kp35.162
+ （2）皆是四諦及道品慧（印順法師，《大智度論筆記》［F032］p.363） ^kp-35-162
 
-3、結成 ^kp35.163
+ （3）皆是出三界、入三脫〔門〕，成三乘果慧（印順法師，《大智度論筆記》［F032］p.363） ^kp-35-163
 
-（二）答難：「無生、性空，大小智慧云何優劣」疑 ^kp35.164
+ 2、顯行果無別 ^kp-35-164
 
-1、問：智慧何故無生性空 ^kp35.165
+ （1）皆以無漏智滅結得果（印順法師，《大智度論筆記》［F032］p.363） ^kp-35-165
 
-2、答 ^kp35.166
+ （2）皆用二種解脫果（印順法師，《大智度論筆記》［F032］p.363） ^kp-35-166
 
-（1）小解 ^kp35.167
+ （3）皆能入涅槃故（印順法師，《大智度論筆記》［F032］p.363） ^kp-35-167
 
-（2）大解：慧從緣生無自性故 ^kp35.168
+ 3、結成 ^kp-35-168
 
-（三）愚智一如 ^kp35.169
+ （二）答難：「無生、性空，大小智慧云何優劣」疑[^35.142]（印順法師，《大智度論筆記》［C011］p.202） ^kp-35-169
 
-1、諸法入法性中，無有別異。入般若中，一味常淨 ^kp35.170
+ \`1021\`1、問：智慧何故無生性空（印順法師，《大智度論筆記》［F032］p.364） ^kp-35-170
 
-2、愚癡實相即智慧，若執著智慧即愚癡，有何別異 ^kp35.171
+ 2、答（印順法師，《大智度論筆記》［F032］p.364） ^kp-35-171
 
-3、初入佛法，是癡是慧；轉後深入，智愚無異 ^kp35.172
+ （1）小解（印順法師，《大智度論筆記》［F032］p.364） ^kp-35-172
 
-（四）結 ^kp35.173
+ A、緣無生性空（滅諦）故（印順法師，《大智度論筆記》［F032］p.364） ^kp-35-173
 
-二、佛答：三乘用心有別 ^kp35.174
+ ※ 因論生論：賢聖智慧皆緣四諦生，何故但說滅諦 ^kp-35-174
 
-（一）菩薩欲以一切種智度一切眾生故 ^kp35.175
+ B、無生約緣滅諦，性空約緣三諦（印順法師，《大智度論筆記》［F032］p.364） ^kp-35-175
 
-1、釋佛所說 ^kp35.176
+ （2）大解：慧從緣生無自性故（印順法師，《大智度論筆記》［F032］p.364） ^kp-35-176
 
-（2）釋「^行道慧益一切眾生^」 ^kp35.177
+ （三）愚智一如（印順法師，《大智度論筆記》［E017］p.314） ^kp-35-177
 
-（3）釋「^當以一切種智知一切法^」 ^kp35.178
+ 1、諸法入法性中，無有別異。入般若中，一味常淨（印順法師，《大智度論筆記》［E017］p.314） ^kp-35-178
 
-（4）釋「^度一切眾生^」 ^kp35.179
+ 2、愚癡實相即智慧，若執著智慧即愚癡，有何別異（印順法師，《大智度論筆記》［E017］p.314） ^kp-35-179
 
-2、釋舍利弗所答 ^kp35.180
+ 3、初入佛法，是癡是慧；轉後深入，智愚無異（印順法師，《大智度論筆記》［E017］p.314）[^35.148] ^kp-35-180
 
-3、結成 ^kp35.181
+ （四）結 ^kp-35-181
 
-（二）明二乘無求無上菩提願，無度一切眾生願故不及菩薩 ^kp35.182
+ 二、佛答：三乘用心有別 ^kp-35-182
 
-1、大空小空：毛空與虛空 ^kp35.183
+ （一）菩薩欲以一切種智度一切眾生故（印順法師，《大智度論筆記》［F032］p.363） ^kp-35-183
 
-2、事同義異 ^kp35.184
+ 1、釋佛所說 ^kp-35-184
 
-3、以一況多 ^kp35.185
+ （1）佛反問事端，令其得解 ^kp-35-185
 
-（三）菩薩欲行一切功德，成圓滿覺，度一切眾生故 ^kp35.186
+ A、先辨四種論 ^kp-35-186
 
-1、先明二乘不欲求十力等佛功德，不念度無量眾生 ^kp35.187
+ （A）必定論 ^kp-35-187
 
-2、次明菩薩能行六度，欲具足十力等佛功德，度脫無量眾生 ^kp35.188
+ （B）分別論 ^kp-35-188
 
-（1）舉螢火喻二乘劣 ^kp35.189
+ a、舉經：問無畏太子以摘〔擿〕子口出血事（印順法師，《大智度論筆記》［G010］p.384） ^kp-35-189
 
-（2）舉慧日喻菩薩勝 ^kp35.190
+ b、舉經：五比丘問受樂得道否（印順法師，《大智度論筆記》［G010］p.384） ^kp-35-190
+
+ c、結 ^kp-35-191
+
+ （C）反問論 ^kp-35-192
+
+ （D）置論 ^kp-35-193
+
+ B、佛以反問論答 ^kp-35-194
+
+ （2）釋「行道慧益一切眾生」 ^kp-35-195
+
+ A、釋「道慧」 ^kp-35-196
+
+ （A）菩薩度眾生慧名道慧（印順法師，《大智度論筆記》［E016］p.314） ^kp-35-197
+
+ （B）以八聖道令得益------道慧（印順法師，《大智度論筆記》［E016］p.314） ^kp-35-198
+
+ B、釋「益一切眾生」 ^kp-35-199
+
+ （3）釋「當以一切種智知一切法」 ^kp-35-200
+
+ （4）釋「度一切眾生」 ^kp-35-201
+
+ ※ 佛為何明知故問──欲令舍利弗自說 ^kp-35-202
+
+ 2、釋舍利弗所答 ^kp-35-203
+
+ 3、結成 ^kp-35-204
+
+ （二）明二乘無求無上菩提願，無度一切眾生願故不及菩薩 ^kp-35-205
+
+ 1、大空小空：毛空與虛空（印順法師，《大智度論筆記》［E016］p.314） ^kp-35-206
+
+ 2、事同義異 ^kp-35-207
+
+ 3、以一況多 ^kp-35-208
+
+ （三）菩薩欲行一切功德，成圓滿覺，度一切眾生故（印順法師，《大智度論筆記》［F032］p.363） ^kp-35-209
+
+ 1、先明二乘不欲求十力等佛功德，不念度無量眾生 ^kp-35-210
+
+ 2、次明菩薩能行六度，欲具足十力等佛功德，度脫無量眾生 ^kp-35-211
+
+ （1）舉螢火喻二乘劣 ^kp-35-212
+
+ （2）舉慧日喻菩薩勝 ^kp-35-213
+
+[^35.1]:	前品指《摩訶般若波羅蜜經》卷1〈1 序品〉，《大智度論》卷134。
+[^35.2]:	具＝具＋（足）【宋】【元】【明】【宮】【石】。
+[^35.3]:	參見《大智度論》卷67：「有人行雜福德，所謂作福時心生疑悔，是福德果報雖得富貴，不能好用，亦不能與他。罪業因緣故，諸根闇鈍，不擇好醜。是善男子未得道時，清淨福德故，得上妙五欲，亦能盡意用，能隨意施與──或施窮乏，或種於福田。」
+[^35.4]:	（1）《大智度論》卷4：「巧變化師，毘首羯磨天。」（2）《阿毘曇毘婆沙論》卷47：問曰：「如報慧微劣可爾；威儀工巧者，亦有勢用，如世尊威儀，毘首羯磨天工巧，乃似願智所作。」答曰：「雖極工巧，為邪命所覆。復次，雖是極巧，猶為他人所譏言：『是處不好。』」（3）《翻譯名義集》卷2：「毘首羯磨，《正理論》音云毘濕縛羯磨，此云種種工業。西土工巧者，多祭此天。」
+[^35.5]:	（1）《一切經音義》卷26：「尸毘王（古音云亦名濕鞞，此云安隱也）。」（2）《翻梵語》卷4：「尸毘王（亦云涅鞞，亦云尸比。譯曰：有安隱也。）」
+[^35.6]:	《一切經音義》卷11：「菴摩羅樹（梵語，果樹名也，此國無。古譯或云菴婆羅，或曰菴羅樹，皆一也。《涅盤經》云：如菴羅樹一年三變，有時生花光色敷榮，有時生葉滋茂蓊欝，有時彫落狀如枯樹。又云：如菴羅樹，花多果少）。」
+[^35.7]:	（1）《大般涅槃經》卷14：「譬如魚母，多有胎子，成就者少；如菴羅樹，花多果少；眾生發心乃有無量，及其成就少不足言。」（2）《大智度論》卷4：「菩薩發大心，魚子菴樹華；三事因時多，成果時甚少」
+[^35.8]:	稱（ㄔㄥˋ）：同" 秤 "。1.測定物體重量的器具。（《漢語大詞典》（八），p.112）
+[^35.9]:	參見《大智度論》卷4、卷27（257a814）、卷33（304c29305a1）。參見Lamotte（1944, p.255, n.1）：《六度集經》（2經）b；《菩薩本緣經》卷3；《本生鬘論》卷1ba；《大莊嚴論經》卷12（64經）；《賢愚經》卷1c；《眾經撰雜譬喻》卷上；《經律異相》卷25ca。
+[^35.10]:	躬自：自己，親自。《詩‧衛風‧氓》："靜言思之，躬自悼矣。"（《漢語大詞典》（十），p.708）
+[^35.11]:	參見《太子瑞應本起經》卷上：「便起瞻沸星，夜其過半，見諸天於上叉手，勸太子去。即呼車匿，徐令被馬褰裳跨之，徘徊於庭，念開門當有聲，天王維睒，久知其意，即使鬼神，捧舉馬足。」另參見《普曜經》卷4，《方廣大莊嚴經》卷6，《異出菩薩本起經》；《大智度論》卷34、卷50。
+[^35.12]:	參見《觀虛空藏菩薩經》：「天上四塔者，忉利天城東照明園中，有佛髮塔；忉利天城南麁澁園中，有佛衣塔；忉利天城西歡喜園中，有佛鉢塔；忉利天城北駕御園中，有佛牙塔。人間四塔者：第一、所生塔，在拘薩羅國迦毘羅城嵐鞞林；第二、道場塔，在摩伽陀國伽耶城菩提樹下；第三、轉法輪塔，在伽尸國波羅奈城鹿野苑中；第四、般涅槃塔，在摩羅國拘尸羅城雙樹間。」
+[^35.13]:	（1）《摩訶般若波羅蜜經》卷17：「阿惟越致菩薩摩訶薩，執金剛神王常隨逐，作是願：『是菩薩摩訶薩當得阿耨多羅三藐三菩提，我常隨逐。』乃至五性執金剛神常隨守護。」（2）印順法師，《佛教史地考論》，p.247：「密跡金剛，以手執金剛杵得名，本係大力夜叉，為四天王所統率。因其常隨侍佛，守護佛教，成為佛教中最切要最熱誠之護法神。」
+[^35.14]:	參見《大智度論》卷26。
+[^35.15]:	受＝受＋（一人）【宋】【元】【明】。
+[^35.16]:	二乘差別：三祇、無量僧祇。
+[^35.17]:	胤（ㄧㄣˋ）：1.後嗣，子嗣。4.繼承，延續。（《漢語大詞典》（一），p.666）
+[^35.18]:	參見《摩訶般若波羅蜜經》卷17：「菩薩摩訶薩行六波羅蜜時，見眾生有大小便患，當作是願：我作佛時，令我國土中眾生皆以歡喜為食，無有便利之患，乃至近一切種智。」另參見《大寶積經》卷60〈15文殊師利授記會〉：「如阿彌陀佛剎以法喜為食。」《大聖文殊師利菩薩佛剎功德莊嚴經》卷下。
+[^35.19]:	（1）《自在王菩薩經》卷下：「是天王佛及諸菩薩不著袈裟，皆著自生淨妙天衣，亦無結惑※。」※惑＝戒【宋】【元】【明】【宮】。（2）［隋］吉藏撰，《法華義疏》卷9：「一、出家成佛，如釋迦。二、在家成佛，如《智度論》云天王佛是，故不須鉢及袈裟；則調達成佛號天王佛是也。三者、俱非，謂淨土佛。」
+[^35.20]:	天王佛、白衣，不用鉢食。
+[^35.21]:	阿迦尼吒天：第四禪天最高位之色究竟天。
+[^35.22]:	勸請說法者：欲、色諸天。
+[^35.23]:	參見《大智度論》卷9〈1 序品〉：「以淨居天常憐愍眾生、常勸請佛故。」《大智度論》卷34〈1 序品〉：「我當於菩提樹下坐，四天王天乃至阿迦尼吒天，以天衣為座者，當學般若波羅蜜！」
+[^35.24]:	參見《大智度論》卷1ab、卷25cb。
+[^35.25]:	參見《摩訶般若波羅蜜經》卷1〈2 奉鉢品〉：「佛告舍利弗：若菩薩摩訶薩行般若波羅蜜能作是功德，是時四天王皆大歡喜，意念言：『我等當以四鉢奉上菩薩，如前天王奉先佛鉢。』」另參見《大智度論》卷35。
+[^35.26]:	（前品中功德也）夾註＝（前品中功德也）本文【宋】【宮】。
+[^35.27]:	惓：同「倦」。疲勞，勞累。（《漢語大字典》（四），p.2318）
+[^35.28]:	〔見〕－【元】【明】。
+[^35.29]:	相＝根【宋】【明】【石】＊【宮】。
+[^35.30]:	無根能不能受道。
+[^35.31]:	毘尼：無根不得出家。
+[^35.32]:	勉：2.勸勉，鼓勵。（《漢語大詞典》（二），p.791）濟：5.救助。（《漢語大詞典》（六），p.190）
+[^35.33]:	參見《法句經》卷上〈80 言語品〉：「言語品者，所以戒口，發說、談論當用道理。惡言罵詈，憍陵蔑人，興起是行，疾怨滋生。遜言順辭，尊敬於人，棄結忍惡，疾怨自滅。......不使至惡意，出言眾悉可；至誠甘露說，如法而無過；諦如義如法，是為近道立。說如佛言者，是吉得滅度；為能作浩際，是謂言中上。」
+[^35.34]:	參見《禪法要解》卷上：「行慈者諸惡不能加，如好守備，外賊不害，若欲惱害，反自受患；如人以掌拍矛，掌自傷壞，矛無所害；五種邪語，不能壞心。五種者：一、妄語說過；二、惡口說過；三、不※時說過；四、惡心說過；五、不利益說過。」※不＝非【宋】【元】【明】【宮】。
+[^35.35]:	善根（即善人相）。
+[^35.36]:	過度：1.通過，經過。《管子‧立政》："決水潦，通溝瀆，修障防，安水藏，使時水雖過度，無害于五穀，歲雖凶旱，有所秎穫，司空之事也。"（《漢語大詞典》（十），p.964）
+[^35.37]:	（1）太子入三龍宮求珠，龍王願為多聞、神足、智慧第一弟子。^（2）參見《大意經》，《生經》卷1《佛說墮珠著海中經第8》，《賢愚經》卷8（40經）〈35 大施抒海品〉；《大智度論》卷12aa，《大智度論》卷16。
+[^35.38]:	迎逆：猶迎接。唐‧玄奘《大唐西域記‧拘尸那揭羅國》："婆羅門馳往迎逆，問所從至，請入僧坊，備諸供養。"（《漢語大詞典》（十），p.747）
+[^35.39]:	延：6.引導，引入，迎接。（《漢語大詞典》（二），p.897）
+[^35.40]:	參見《金色王經》：「唯雨七寶，所謂金、銀、及毘琉璃、私頗知迦、赤色真珠、并雨馬瑙、牟娑羅等如是七寶。」
+[^35.41]:	此事緣另參見《大智度論》卷4、卷30（276c25）。
+[^35.42]:	要：4.約言。以明誓的方式就某事作出莊嚴的承諾或表示某種決心。5.指所訂立的誓約、盟約。（《漢語大詞典》（八），p.753）
+[^35.43]:	眴（ㄕㄨㄣˋ）：1.看，眨眼。（《漢語大詞典》（七），p.1204）
+[^35.44]:	（1）《一切智光明仙人慈心因緣不食肉經》：「時彼國中有大婆羅門，名一切智光明，聰慧多智，廣博眾經，世間技藝，六十四能，無不綜練。」（2）《大智度論》卷2〈1 序品〉：「四違陀經中治病法，鬪戰法，星宿法，祠天法，歌舞、論議難問法，如是等六十四種世間伎藝，淨飯王子廣學多聞，若知此事不足為難。」（3）六十四種世藝：六十四能。
+[^35.45]:	參見《出曜經》卷25：「昔日大目揵連同產弟，饒財多寶，七珍具足：金、銀、珍寶、車磲、馬瑙、真珠、虎珀，庫藏盈溢，僕從奴婢不可稱計。」
+[^35.46]:	參見《大方廣佛華嚴經》卷29：「勝日身如來。」
+[^35.47]:	可＝共【宋】【元】【明】【宮】。
+[^35.48]:	參見《大智度論疏》卷15：「女得調伏心志者，即是柔順忍也。」（卍新續藏46，842b24）
+[^35.49]:	（1）《大智度論疏》卷15：「六寶來應者，以喜德一人變為女寶，故唯六寶來也。師言：此論云寶女決定不孕，若華嚴乃至言生子者，此論凡女未變之時有孕，至變為寶女時始生，故云爾。若一日作寶女者無也。」（卍新續藏46，842b24c4）（2）《大方廣佛華嚴經》卷29：「輪王七寶，自然而至：一者、輪寶，名無礙行，輻網具足，百千妙寶以為莊嚴，閻浮檀金光明普照；二者、象寶，名金剛山，威力廣大；三者、馬寶，名迅疾風；四者、珠寶，名日光藏雲；五者、女寶，名具足豔吉祥；六、主藏臣寶，名為大財；七、主兵寶，名離垢眼。如是七寶，欻然出現，具足成就，為轉輪王。」
+[^35.50]:	參見《大方廣佛華嚴經》卷28〈入不思議解脫境界普賢行願品〉，《大方廣佛華嚴經》卷29〈入不思議解脫境界普賢行願品〉。
+[^35.51]:	王＋（天）【宋】【元】【明】【宮】。
+[^35.52]:	〔有〕－【宋】【元】【明】【宮】。
+[^35.53]:	（1）參見《大智度論》卷1：「欲捨親屬，出家，修無上道；中夜起觀，見諸伎直、后妃、婇女狀若臭屍。」（2）妓（ㄐㄧˋ）：1.歌舞女藝人。（《漢語大詞典》（四），p.295）（3）伎（ㄐㄧˋ）：2.指各種技藝。3.才智，才能。6.古代指百戲雜技藝人。7.指以音樂歌舞為業的女子。（《漢語大詞典》（一），p.1178）（4）直：10.值班，侍衛。《玉篇》：「直，侍也。」（《漢語大字典》（一），p.62）（5）直：20當值，值勤。《晉書‧庾玟傳》："玟為侍中，直於省內。"（《漢語大詞典》（一），p.853）（6）有關「妓直」、「伎直」的詞義，依《玉篇》「直，侍也」之說，或可解作「侍」。古代有「直侍」一詞，此「直」當指隨從於帝王左右的人。此處「妓直」、「伎直」指有才藝或隨從釋迦太子的女侍。
+[^35.54]:	惡露：佛教謂身上不淨之津液。中醫特指婦女產後胞宮內遺留的餘血和濁液。（《漢語大詞典》（七），p.562）
+[^35.55]:	流涎：淌口水。（《漢語大詞典》（五），p.1266）
+[^35.56]:	塗：6.猶滿布。8.污，染污。（《漢語大詞典》（二），p.1176）漫：7.泛指物滿溢出。8.浸壞，淹沒。（《漢語大詞典》（六），p.84）
+[^35.57]:	（1）參見《中阿含經》卷54（200經）《阿梨吒經》；《大般涅槃經》卷34；《大般涅槃經》卷31；《摩訶僧祇律》卷25；《四分律》卷17；《十誦律》卷15；《大智度論》卷93。（2）受五欲，心不著，不妨道邪說。
+[^35.58]:	毘尼：出家法中，婬戒在初。
+[^35.59]:	菩薩學佛須斷欲不。
+[^35.60]:	方便行欲，是法身菩薩。
+[^35.61]:	五情：即五根。參見《大智度論》卷19：「眼等五情為內身，色等五塵為外身。」
+[^35.62]:	以欲為方便而度眾生（是法身事）。
+[^35.63]:	〔佛〕－【明】【宮】。
+[^35.64]:	度生現身不同。
+[^35.65]:	然＝燒【宋】【元】【明】【宮】【石】＊。
+[^35.66]:	穢賤：猶鄙賤。陳衍《遼詩紀事‧懿德皇后》："爇薰鑪，能將孤悶蘇。若道妾身多穢賤，自霑御香香徹膚。爇薰鑪，待君娛。"（《漢語大詞典》（八），p.155）
+[^35.67]:	賊：1.敗壞，毀壞。3.害，傷害。4.殺戮，殺害。（《漢語大詞典》（十），p.183）
+[^35.68]:	（1）摾＝掠【宋】【元】【明】【宮】。（2）摾（ㄐㄧㄤˋ）：同「弶」，《集韻．漾韻》：「弶，《字林》：施罟於道。一曰以弓罥獸，或作摾。」（《漢語大字典》（三），p.1950）（3）弶：（ㄐㄧㄤˋ）：捕捉鳥獸的器械。晉竺法護《鹿母經》："有一鹿母，懷妊獨逝，被逐飢疲，失侶悵怏。時生二子，捨行求食，煢悸失措，墮獵弶中。"（《漢語大詞典》（四），p.131）
+[^35.69]:	害＝苦【明】【宮】。
+[^35.70]:	參見《摩訶般若波羅蜜經》卷1〈1 序品〉：舍利弗白佛言：「世尊！菩薩摩訶薩云何欲以一切種智知一切法當習行般若波羅蜜？」
+[^35.71]:	《摩訶般若波羅蜜經》卷1〈1 序品〉：佛告舍利弗：「菩薩摩訶薩欲以一切種智知一切法，當習行般若波羅蜜。」
+[^35.72]:	〔今〕－【宋】【元】【明】【宮】。
+[^35.73]:	參見《摩訶般若波羅蜜經》卷1〈1 序品〉：佛告舍利弗：「菩薩摩訶薩以不住法住般若波羅蜜中，以無所捨法應具足檀那波羅蜜，施者、受者及財物不可得故。」
+[^35.74]:	參見《摩訶般若波羅蜜經》卷1〈1 序品〉。
+[^35.75]:	已＝已（得）【宋】【元】【明】【宮】。
+[^35.76]:	《大正藏》原作「己」，今依《高麗藏》作「已」（第14冊，737a1）。
+[^35.77]:	智慧因緣：先念佛道，知般若，見已，身然後行。
+[^35.78]:	智慧因緣：言不見者，明入般若觀時不見。
+[^35.79]:	（1）入般若觀，不見菩薩及般若。般若為令眾生知實法故出。^（2）《大智度論疏》卷15：「為令眾生知實法故出已下，明此波若本為令人知實法故出，實法之中既無所有，是故波若人亦無所見也。」（卍新續藏46，844a35）
+[^35.80]:	參見《摩訶般若波羅蜜經》卷1〈3 習相應品〉、卷2〈7 三假品〉（230c5231a19）、卷3〈9 集散品〉（234c1429）、卷4〈16 乘乘品〉（247b619）、卷7〈26 十無品〉（268c19269a8）另參見《摩訶般若波羅蜜經》卷1〈2 奉鉢品〉；《大智度論》卷41〈7 釋三假品〉。
+[^35.81]:	空：無實事而有作用。
+[^35.82]:	《大智度論》卷35〈2 報應品〉：「此中不言常不見，但明入般若觀時，不見菩薩及般若波羅蜜；般若波羅蜜為令眾生知實法故出。」
+[^35.83]:	（1）《大智度論疏》卷15：「既云波若為實法故出，若言無波若可見者，此義則可信，若言出觀還見波若者，非是實故，則不可信也。」（卍新續藏46，844a79）（2）《大智度論》卷36：「又空者，性自空，不從因緣生；若從因緣生，則不名性空。行者若入時見空，出時不見空，當知是虛妄。」
+[^35.84]:	┌入觀則見空	┌世俗法說	┴出觀則見有－（實未嘗不空也）諸法常空乎	┴入般若中，諸觀戲論滅無出入。
+[^35.85]:	法＝是【宋】【元】【明】【宮】【石】。
+[^35.86]:	言＝者【宋】【元】【明】【宮】。
+[^35.87]:	入般若，諸觀戲論滅，無出入觀。
+[^35.88]:	般若中無出入觀，但假名說，以化凡夫，當取說意，莫著語言。
+[^35.89]:	破我我所則一切空，如是離欲名得道。
+[^35.90]:	（1）不見行，不見不行五義。^	^案：印順法師筆記原將「行空般若故」與「不見行」相連，今依論改為與「不見不行」相接。（3）參見《大智度論疏》卷15：「『不見我行般若，不見我不行』者已下，此下有五復次意來釋此一句文也，當一一釋。初就凡聖明行不義也。當說。『復次，佛為法王』已下，此約因果明行不行義也。當說。『復次，行般若波羅蜜者生憍慢心言』已下，次就慢懈進怠解行不行義也。當說。『復次，不見我行波若波羅蜜』者，為破著有見故言不見；下明破病互為藥石義，釋所以言行不行義。師此中引《淨名》中童子說法不有亦不無等偈，及引《不真空論》言有本無名等來釋此義意，當一一廣說也。『復次，不見我行』已下，次明約止戲調息懈怠等義來釋行不行義，以作乘馬喻來也。當說。」（卍新續藏46，844a20b6）
+[^35.91]:	慢＋（心）【宋】【元】【明】【宮】。
+[^35.92]:	憂悴：憂傷。（《漢語大詞典》（七），p.689）
+[^35.93]:	┌性相違故	┌空中無色──法空中無一毫法可得故。	┴自相不可得故	│離色無空──破色乃有空故。（非色異空，非空異色）故空不破五眾色空四句	┤空即是色	└色即是空	
+[^35.94]:	參見《大智度論》卷35。
+[^35.95]:	參見《摩訶般若波羅蜜經》卷1〈2 奉鉢品〉：佛告舍利弗：「菩薩摩訶薩行般若波羅蜜時，不見菩薩、不見菩薩字，不見般若波羅蜜，亦不見我行般若波羅蜜，亦不見我不行般若波羅蜜。」
+[^35.96]:	參見《大智度論》卷4。
+[^35.97]:	┌成就───菩提般若二分	┴未成就──空　　　
+[^35.98]:	參見《大智度論》卷1，《大智度論》卷15，《大智度論》卷17，《大智度論》卷22，《大智度論》卷31，《大智度論》卷52，《大智度論》卷53。
+[^35.99]:	無生（生實不可得故）無滅，無垢無淨。
+[^35.100]:	一切法皆憶想分別因緣和合故強名說。
+[^35.101]:	名空義空觀：名字是因緣和合作法，但分別憶想假名說。
+[^35.102]:	慧眼：徧求不見，乃至不見細微一法。
+[^35.103]:	參見《大智度論》卷10、卷15（169a28b26）、卷19（197b21c29）、卷21（218b17c17）、卷24（235b21c3）、卷27（261c22262a16）、卷28（264a29b10；266c26）、卷29（271c27272a7）、卷30（283a2028）。另參見卷36（322c28323a17）、卷37（335a1623）、卷39（343b2425）、卷43（371a29b5）、卷48（405c23406a9）。
+[^35.104]:	不取一切。不入涅槃：大悲心故，十方佛念故，本願未滿故，精進力故，般若方便和合（不著不著）故。
+[^35.105]:	（大智......一）十三字＝（大智度第三品釋論習相應品之一）十四字【宋】，＝（大智度論釋習相應品第三）十一字【元】，＝（釋習相應品第三之一，（經作習應品））十四字【明】，＝（大智度論第三品釋論習應品）十二字【宮】，＝（大智度第三品釋論習相應品）十二字【石】。
+[^35.106]:	參見《大智度論》卷35〈2 奉鉢品〉。
+[^35.107]:	二空：觀外法皆空無所有，次觀能知空者亦空──法空我空。
+[^35.108]:	參見《大智度論》卷4、卷31（287b1317；287b25c6）。
+[^35.109]:	況：2.比，比擬。《漢書高惠高后文功臣表序》：「以往況今，甚可悲傷！」顏師古注：「況，譬也。」引申為推及、推測。（《漢語大字典》（三），p.1586）
+[^35.110]:	參見《大智度論》卷35。
+[^35.111]:	《大智度論》卷31。
+[^35.112]:	生＝主【宋】【宮】。
+[^35.113]:	《十住毘婆沙論》卷15：「復次，五邪見名為惡意，所謂邪見、身見、邊見、見取、戒取。」
+[^35.114]:	別＝品【宋】【元】【明】【宮】【石】。
+[^35.115]:	《大正藏》原作「功」，今依《高麗藏》作「巧」（第14冊，738c20）。
+[^35.116]:	（經）	┌以不可得空度一切眾生故。（同第一）菩薩智慧勝小乘：	┤欲以一切種智度一切眾生故。		└欲行一切功德，成圓滿覺，度一切眾生故。	
+[^35.117]:	茅＝等【宋】【宮】，＝葦【元】【明】【石】。
+[^35.118]:	┌一、以知空，空復空，空與不空一等無異；二、以此智度一切生。		│一、大悲，二、般若。	（論義）	│一、般舟三昧，二、方便。菩薩勝小乘智慧（二緣）：	┤一、常住禪定，二、能達法性。		│一、代眾生受苦，二、自捨一切樂。		└一、慈心，二、一切功德不著。	
+[^35.119]:	以：16.連詞。表示并列關係，相當於「和」、「而」。《詩‧大雅‧皇矣》：「予懷明德，不大聲以色，不長夏以革。」馬瑞辰通釋：「以、與，古通用。」（《漢語大字典》（一），p.106）
+[^35.120]:	大小智慧之別：     大：以空知一切空，亦不見是空──空不空等一不異。     小：觀諸法空，不能觀世間涅槃為一。	
+[^35.121]:	得＝德【宋】【元】【明】【宮】【石】。
+[^35.122]:	茅＝葦【宋】【元】【明】【宮】，〔茅〕－【石】。
+[^35.123]:	《大智度論疏》卷15：「言於外法中亦大者，明身子七歲明已論義無底，此之二人皆解十八種大經，能拂異學，故云外亦大也。」（卍新續藏46，846a1012）
+[^35.124]:	郗＝絺【元】【明】。
+[^35.125]:	稠（ㄔㄡˊ）：1.多。2.繁密。3.濃厚。（《漢語大詞典》（八），p.103）
+[^35.126]:	緻（ㄓˋ）：1.細密，精密。（《漢語大詞典》（九），p.962）
+[^35.127]:	楚毒：1.指酷刑。（《漢語大詞典》（四），p.1154）
+[^35.128]:	參見《雜阿含經》卷22（592經），《雜阿含經》卷24（617經），《雜阿含經》卷46（1234經）；《中阿含經》卷6（28經）《教化病經》，《中阿含經》卷6卷55（202經）《持齋經》等。
+[^35.129]:	大小差別：十六分、無數譬喻。
+[^35.130]:	置：3.廢棄，捨棄。4.擱置，放下。（《漢語大詞典》（八），p.1024）
+[^35.131]:	以＝故【宋】【元】【明】【宮】。
+[^35.132]:	及＝如【宋】【元】【明】【宮】。
+[^35.133]:	𣫘＝鷇【宋】＊【元】＊【明】＊，＝鷇【宮】＊。
+[^35.134]:	福祚：1.福祿，福分。《左傳‧昭公十五年》："福祚之不登，叔父焉在？"《後漢書‧劉表傳》："長享福祚，垂之後嗣。"（《漢語大詞典》（七），p.945）
+[^35.135]:	《摩訶般若波羅蜜經》卷1〈3 習應品〉：「菩薩摩訶薩作如是行般若波羅蜜，除佛智慧，過一切聲聞、辟支佛上，用不可得空故。」另參見《大智度論》卷35〈3 習相應品〉。
+[^35.136]:	┌皆是諸法實相慧。	│皆是四諦及道品慧。┌舍利弗約三乘智慧無生性空無別作難：	┤皆是出三界、入三脫〔門〕，成三乘果慧。│	│皆以無漏智滅結得果。│	│皆用二種解脫果。│	└皆能入涅槃故。└佛以三乘用心別作答		
+[^35.137]:	《大般若波羅蜜多經》卷403〈3 觀照品〉：爾時，舍利子白佛言：「世尊！若預流、一來、不還、阿羅漢聲聞般若，若獨覺般若，若菩薩摩訶薩般若，若如來、應、正等覺般若，是諸般若皆無差別，不相違背，無生無滅，自性皆空。若法無差別、不相違、無生滅、自性空，是法差別既不可得，云何世尊說『行般若波羅蜜多菩薩摩訶薩，於一日中所修般若，一切聲聞、獨覺般若所不能及』？」
+[^35.138]:	六＝弟【宋】【元】【明】【宮】【石】。六子：菩薩、辟支佛、阿羅漢、阿那含、斯陀含、須陀洹。
+[^35.139]:	（1）實相智慧：三乘賢聖智慧，皆是諸法實相慧。^（2）《大智度論疏》卷15：「今但以智慧體性法中同等無差別義以為問也。就此以同為問中，凡有二意：一者，以賢聖智慧皆從實相理生，故同名諸法實相慧，既同是出世間智慧，故言同；二者，此智慧等體性自無生，自性是空，以此二義同故為問，故言同也。」（卍新續藏46，846b712）
+[^35.140]:	（1）《大毘婆沙論》卷33：「云何無學解脫蘊？答：無學作意相應心，已勝解、今勝解、當勝解。謂盡、無生、無學正見相應勝解，此蘊所攝故，非無為解脫。謂一切法中，二法名解脫：一者，擇滅，即無為解脫。二者，勝解，即有為解脫，於境自在立解脫名，非謂離繫。」（2）《大毘婆沙論》卷148：「答：解脫有二，謂有為、無為。二種心解脫是有為；一切結盡是無為。有為解脫有下、中、上，初所得異後所得異，故差別說；無為解脫無下、中、上，後得同初，故無別說。」（3）《大智度論》卷26：「解脫有二種：有為解脫、無為解脫。有為解脫名無漏智慧相應解脫，無為解脫名一切煩惱習都盡無餘。」（4）《俱舍論》卷25：「解脫體有二，謂有為，無為。有為解脫，謂無學勝解；無為解脫，謂一切惑滅。」
+[^35.141]:	《大智度論疏》卷15：「同事者，同出世事也。同緣者，同緣實相也。同行已下，同一聖行也。同果報者，同出世間果報也。當說。所以者何已下，所以即是義。此意言其義者何？此智慧同得無生性空故也。」（卍新續藏46，846b1519）
+[^35.142]:	問：	智慧何故無生性空？答：	小解	┬一、緣無生性空（滅諦）故		└二、無生約緣滅諦，性空約緣三諦 	大解	─三、慧從緣生無自性故。	
+[^35.143]:	《大智度論疏》卷15：「問曰：破無明集諸善法已下，問意言，此智慧既是心數法，云何言無生性空也。」（卍新續藏46，846b2021）
+[^35.144]:	（1）智慧得名無生性空。^（2）《大智度論疏》卷15：「答曰已下，答意云：此智慧緣滅諦，滅諦是不生，故逐緣名不生。又從因緣和合生，無有自性，故名為無生性空。而言爾者，此智亦有從境，亦當體得名，故名無生性空義也。」（卍新續藏46，846b2124）
+[^35.145]:	《大智度論疏》卷15：「所以者何已下，明以三諦入有為相故言屬，又言為滅諦故脩行於道，故言屬也。」（卍新續藏46，846c13）
+[^35.146]:	（1）併食＝并及【宋】【元】【明】【宮】。（2）食（ㄙˋ）：5.宴請，以酒食款待。（《漢語大詞典》（十二），p.479）
+[^35.147]:	參見《大方廣寶篋經》卷上，《佛說文殊師利現寶藏經》卷上，《大智度論》卷64。
+[^35.148]:	初學、久學別：初入是慧是癡，深入癡慧無異。
+[^35.149]:	參見《大智度論》卷2、卷22（222c2526）、卷26（253b1319）。
+[^35.150]:	健＝揵【宋】【元】【明】【宮】。
+[^35.151]:	（1）了：結束，了結。《廣雅‧釋詁四》：「了，訖也。」（《漢語大字典》（一），p.48）（2）類似的用法另參見《大智度論》卷7：「船師言：是摩伽羅魚王開口，一是實日，兩日是魚眼，白山是魚齒，水流奔趣，是入其口。我曹了矣！」《大智度論》卷17：「王思惟言：若十二年不雨，我國了矣！無復人民。」
+[^35.152]:	〔無〕－【宋】【元】【明】【宮】。
+[^35.153]:	擿（ㄊㄧˋ）：挑（出）。《集韻‧錫韻》：「擿，挑也。」（《漢語大字典》（三），p.1976）
+[^35.154]:	（1）參見《中部》（58）《無畏王子經》（MN I, p.395）。（2）另參見《十住毘婆沙論》卷11：又《無畏王子經》中說：「無畏白佛言：『佛有所說，能令他瞋不？』佛言：『王子！是事不定。佛或憐愍心故，令他人瞋，得種善因緣。如乳母以曲指鉤出小兒口中惡物，雖傷無患。』」
+[^35.155]:	參見《中阿含經》卷56（204經）《羅摩經》；《增壹阿含經》卷14〈24 高幢品〉。
+[^35.156]:	約三世五蘊明無常苦無我。
+[^35.157]:	參見《雜阿含經》卷2（33經）。
+[^35.158]:	關於十四無記，另參見《大智度論》卷2、卷26（253b1319）。
+[^35.159]:	參見《摩訶般若波羅蜜經》卷21〈70 三慧品〉與《大智度論》卷84。此一論題於《大智度論》卷27亦曾提及。
+[^35.160]:	參見《大智度論》卷30、卷36。
+[^35.161]:	參見《大智度論》卷31。
+[^35.162]:	參見《大智度論》卷1118。
+[^35.163]:	參見《大智度論》卷37、卷75（590c1115）、卷94（716a2328）；《摩訶般若波羅蜜經》卷26〈83 畢定品〉。
+[^35.164]:	關於「十力、四無所畏、四無礙智、十八不共法」，參見《大智度論》卷2426。
+[^35.165]:	〔一〕－【宋】【元】【明】【宮】＊。
+[^35.166]:	《大正藏》原作「火」，今依《高麗藏》作「光」（第14冊，742c12）。
+[^35.167]:	照明＝明照【宋】【元】【明】【石】。
